Squashed alpha-1.5.3-pre04
commit a368aa6f92564bb24566cec7bba3ebe516650c6f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 19:30:06 2015 +0100

    format translations

commit ae2ede8f2730da74453bbc2ff1090961ad314c98
Merge: e39203d 85dc209
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 19:25:27 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit e39203dc10ae528681ca0a36f21cc30052042406
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 19:25:16 2015 +0100

    simplify logic of moveNodesAsChildren: use childCount as position, it is
    corrected automatically in the moving routine now

commit 85dc2099f9c587dbd302fbea0aed3cf2f4bd0e87
Merge: d654657 2a29e1b
Author: Weblate <noreply@weblate.org>
Date:   Thu Dec 24 19:20:59 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit d654657f98beae5e2c67840c51b69b0dd9cafe1a
Author: Ldm Public <ldmpub@gmail.com>
Date:   Thu Dec 24 18:14:00 2015 +0100

    Translated using Weblate (French)

    Currently translated at 98.9% (1875 of 1894 strings)

commit 2a29e1b605b5a9d2057462b23adef997a9334b69
Merge: cf56d9e 45eaa2a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 19:20:49 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit cf56d9ee3022fb0be2d335a98e65befae14de051
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 19:20:32 2015 +0100

    Bug fix in moving nodes to the end position

commit cd6dffa77bf87fca24b53e66b62a94b09f820c51
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 18:59:53 2015 +0100

    Refactor : replace NodeModel.getChildPosition() by getIndex()

commit 05b06d85790c18bef8fb5332cf6cd2435aad98bc
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Dec 24 18:58:24 2015 +0100

    #2264 1.5.3 _ summary node - parent node doesn't collapse properly

commit 9f91d97cd3edee86682e47e85aced4c343a759a8
Author: Dimitry Poli

--- a/freeplane/resources/translations/Resources_ca.properties
+++ b/freeplane/resources/translations/Resources_ca.properties
@@ -134,6 +134,7 @@ ExportToImage.png.text=Com a PNG...
 ExportToOoWriter.text=Com a un document de l'Open Office...
 ExportToOoWriter.tooltip=Unfolded nodes form the structure, folded nodes the content of the document.
 extension_menu=Estil F\u00EDsic
+extras=Eines
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=PMF
 file=Fitxer
@@ -152,6 +153,7 @@ FoldOneLevelAction.tooltip=<html>Contreu un nivell els nodes seleccionats.</html
 font=Lletra
 FontFamilyAction.text=fam\u00EDlia de la lletra
 FontSizeAction.text=mida de la lletra
+format=Formata
 format_menu_edge_styles=Estils dels cantells
 format_menu_edge_widths=Gruix dels cantells
 FormatCopy.text=Copia el format
@@ -258,12 +260,7 @@ map_already_exists=Aquest mapa ja existeix. Voleu substituir-lo?
 map_corrupted=El mapa \u00E9s corrupte. Voleu veure'n els detalls?
 map_locked_by_open=El mapa {0} est\u00E0 sent editat per l''usuari {1}. Obrint-lo com a nom\u00E9s lectura.
 map_locked_by_save_as=El mapa {0} est\u00E0 sent editat per l''usuari {1}. No s''ha pogut Desar com.
-menu_extras=Eines
-menu_file_import=Importa
-menu_format=Formata
 menu_insert=Insereix
-menu_navigate=Navega
-menu_view=Veure
 mindmap=Mapa
 mindmaps=Mapes
 mindmaps_desc=Mapes (*.mm)
@@ -274,6 +271,7 @@ modes=Modalitats
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Fitxers m\u00E9s recents
 MoveToRootAction.text=Mou-re a l'Arrel
+navigate=Navega
 NavigationNextMapAction.text=Mapa Seg\u00FCent
 NavigationPreviousMapAction.text=Mapa anterior
 new_mindmap=Crea un Mindmap
@@ -574,6 +572,7 @@ url_load_error=No s'ha pogut corregat el mapa des de l'adre\u00E7a:
 user_defined_zoom=Definit per l'usuari.
 user_defined_zoom_status_bar=Canviant la visi\u00F3 al valor d''ampliaci\u00F3 definit de l''usuari: {0}%.
 user_zoom=Factor d'ampliaci\u00F3 d'impressi\u00F3 (0.0 - 2.0):
+view=Veure
 width=Amplada
 yes=S\u00ED
 ZoomInAction.text=Apropa't
