--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -354,6 +354,7 @@ ExternalImageChangeAction.text=Zm\u011Bnit obr\u00E1zek...
 ExternalImageRemoveAction.text=Odstranit obr\u00E1zek
 ExtractLinkFromTextAction.text=P\u0159ev\u00E9st odkaz v r\u00E1mci textu
 ExtractLinkFromTextAction.tooltip=Nastavit odkaz z adresy n textu uzlu
+extras=N\u00E1stroje
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=FAQ
 file=Soubor
@@ -384,7 +385,7 @@ FileRevisionsDialog.question=Nalezeny revize {0}
 FileRevisionsDialog.restore=Obn&oven\u00ED
 FileRevisionsDialog.restore.tooltip=Nahradit {0} za {1}
 FileRevisionsDialog.title=Revize souboru
-filter=Filtr
+filter=F&iltr
 filter_add=P\u0159idat
 filter_and=A
 filter_any_text=J\u00E1dro, detaily nebo pozn\u00E1mku
@@ -453,6 +454,7 @@ FollowLinkAction.text=N\u00E1sledovat odkaz
 font=p\u00EDsmo
 FontFamilyAction.text=P\u00EDsmo
 FontSizeAction.text=Velikost p\u00EDsma
+format=Form\u00E1t
 format_invalid_pattern=Neolatn\u00FD vzor
 format_menu_cloud_shapes=P\u0159idejte mrak nebo zm\u011Bnte styl
 format_menu_edge_styles=Styly hran
@@ -646,7 +648,7 @@ IconSelectionPlugin.text=V\u00FDb\u011Br ikony...
 IconSelectionPlugin.tooltip=<html>Pomoc\u00ED n\u00E1sleduj\u00EDc\u00EDho okna m\u016F\u017Eete vybrat ikonu.</html>
 image_covertLink=P\u0159ev\u00E9st odkaz na obr\u00E1zek
 ImageFlavorHandler=Obr\u00E1zek (samostatn\u00FD soubor)
-import=Import
+import=Importovat
 import_linked_branch_no_link=Vybran\u00FD uzel nem\u00E1 \u017E\u00E1dn\u00FD odkaz, ze kter\u00E9ho se d\u00E1 importovat.
 ImportAction.text=Import
 ImportBranchAction.text=Importovat v\u011Btev...
@@ -678,6 +680,7 @@ license=Licence: GPL 2 nebo nov\u011Bj\u0161\u00ED
 link_error=Nespr\u00E1vn\u00E9 odkaz "{0}" nebyl na\u010Dten
 link_not_available_any_more=Odkaz ji\u017E nen\u00ED platn\u00FD. Uzel byl pravd\u011Bpodobn\u011B smaz\u00E1n.
 link_not_found=Link {0} nenalezen.
+links=Odkaz
 load=&Nahr\u00E1t
 load_accelerator_presets=Nahr\u00E1t
 LoadAcceleratorPresetsAction.textPatterns.text=Text Patterns[translate me]
@@ -745,10 +748,6 @@ menu_displayAttributes=Atributy uzlu
 menu_encryption=Ochrana heslem
 menu_error=Chyba v u\u017Eivatelsky definovan\u00E9 struktu\u0159e menu {0}:\n{1}\nRu\u0161\u00EDm
 menu_extensions=Roz\u0161\u00ED\u0159en\u00ED uzlu
-menu_extras=N\u00E1stroje
-menu_file_import=Importovat
-menu_filter=F&iltr
-menu_format=Form\u00E1t
 menu_group=Skupina uzl\u016F
 menu_hoverView=N\u00E1strojov\u00E9 tipy
 menu_iconByCategory=Ikona podle kategorie...
@@ -756,26 +755,20 @@ menu_iconView=Ikony
 menu_image=Obr\u00E1zek
 menu_insert=Vlo\u017Eit
 menu_latex_formula=LaTeX vzorce
-menu_links=Odkaz
 menu_manageStyles=&Spravovat styly
 menu_moveNode=P\u0159esun a t\u0159\u00EDdit
-menu_navigate=Navigovat
 menu_newNode=Nov\u00FD uzel
 menu_node=Uzel
 menu_node_features=Vlastnosti &uzlu
 menu_nodes=&Uzly
 menu_nodeView=J\u00E1dro uzlu
-menu_notes=Pozn\u00E1mka
 menu_noteView=Pozn\u00E1mky
 menu_openmaps=Mapy
-menu_progress=Ikona pr\u016Fb\u011Bhu (%)
 menu_remove_icons=Odstranit ikony
 menu_removeAttribute=Odstranit atribut
 menu_select=Vyberte
 menu_time=Organizace \u010Dasu
 menu_title=J\u00E1dro uzlu
-menu_toolbars=N\u00E1strojov\u00E9 li\u0161ty
-menu_view=Zobrazit
 menu_viewmode=Nastaven\u00ED zobrazen\u00ED
 MenuUtils.invalid_menuitem={0} nen\u00ED platn\u00E1 polo\u017Eka kl\u00ED\u010De.
 mindmap=Mapa
@@ -797,6 +790,7 @@ ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Posledn\u00ED soubory
 MoveToRootAction.text=P\u0159esunout do ko\u0159ene
 NameConditionAction.text=Nastavit n\u00E1zev
+navigate=Navigovat
 NavigationNextMapAction.text=Dal\u0161\u00ED mapa
 NavigationPreviousMapAction.text=P\u0159ede\u0161l\u00E1 mapa
 new=&Nov\u00FD
@@ -866,6 +860,7 @@ normal=Norm\u00E1ln\u00ED
 not_saved_for_image_error=Mapa mus\u00ED b\u00FDt ulo\u017Eena p\u0159ed t\u00EDm, ne\u017E budete moci vybrat obr\u00E1zek spr\u00E1vcem soubor\u016F
 not_saved_for_link_error=Mapa mus\u00ED b\u00FDt ulo\u017Eena p\u0159ed nastaven\u00EDm odkazu pomoc\u00ED v\u00FDb\u011Bru souboru
 note_window_location=Um\u00EDst\u011Bn\u00ED pozn\u00E1mkov\u00E9ho panelu
+notes=Pozn\u00E1mka
 ok=OK
 OKAction.text=OK
 OnlineReference.text=Online mapy dokumentace
@@ -1191,6 +1186,7 @@ preferences=Nastaven\u00ED
 PrintDirectAction.text=Tisk
 printing_settings=Nastaven\u00ED tisku
 PrintPreviewAction.text=N\u00E1hled tisku...
+progress=Ikona pr\u016Fb\u011Bhu (%)
 PropertyAction.text=Mo\u017Enosti ...
 QuitAction.text=Konec
 read_only=Pouze ke \u010Dten\u00ED
@@ -1418,6 +1414,7 @@ ToggleFoldedAction.text=(Roz)slo\u017Eit
 ToggleLeftToolbarAction.text=P\u0159epnout lev\u00FD panel
 ToggleMenubarAction.text=P\u0159epnout Menu
 ToggleToolbarAction.text=P\u0159epnout Panel n\u00E1stroj\u016F
+toolbars=N\u00E1strojov\u00E9 li\u0161ty
 undefined_error=Nastala neo\u010Dek\u00E1van\u00E1 chyba. Pros\u00EDme, pokuste se zaslat report o chyb\u011B.
 underline=Podtr\u017Een\u00ED
 underlined=Podtrhnut\u00E9
@@ -1437,6 +1434,7 @@ user_defined_zoom_status_bar=M\u011Bn\u00EDm p\u0159ibl\u00ED\u017Een\u00ED lupo
 user_template_dir=U\u017Eivatelsk\u00E9 \u0161ablony
 user_zoom=Faktor lupy p\u0159i tisku (0.0 - 2.0):
 version_up_to_date=Pou\u017E\u00EDv\u00E1te nejnov\u011Bj\u0161\u00ED verzi programu
+view=Zobrazit
 ViewLayoutTypeAction.OUTLINE.text=Zobrazit jako osnovu
 WebDocuAction.text=Webov\u00E1 dokumentace
 width=\u0160\u00ED\u0159ka
