--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -360,6 +360,7 @@ ExternalImageChangeAction.text=Skift billede\u2026
 ExternalImageRemoveAction.text=Fjern billede
 ExtractLinkFromTextAction.text=Konverter link indefra tekst
 ExtractLinkFromTextAction.tooltip=Angiv hyperlink fra adressen i knudepunktsteksten
+extras=V\u00E6rkt\u00F8jer
 f_button_unassigned=<ingen handling >
 FaqOpenURLAction.text=FAQ (ofte stillede sp\u00F8rgsm\u00E5l)
 file=&Filer
@@ -459,6 +460,7 @@ FollowLinkAction.text=F\u00F8lg link
 font=Skrifttype
 FontFamilyAction.text=Skrifttype familie
 FontSizeAction.text=Skriftst\u00F8rrelse
+format=Formater
 format_invalid_pattern=Ikke et gyldig m\u00F8nster
 format_menu_cloud_shapes=Tilf\u00F8j Sky eller \u00E6ndre stil
 format_menu_edge_styles=Kant stil
@@ -652,7 +654,7 @@ IconSelectionPlugin.text=V\u00E6lg icon...
 IconSelectionPlugin.tooltip=<html>Her kan du v\u00E6lge en icon via et undervindue.</html>
 image_covertLink=Konvertere link til billede
 ImageFlavorHandler=Billede (brug separat fil)
-import=Importer
+import=Import
 import_linked_branch_no_link=Det valgte knudepunkthar ingen link at importere fra.
 ImportAction.text=Import
 ImportBranchAction.text=Forgrening\u2026
@@ -691,6 +693,7 @@ license_text=<html>Dette program er fri software. Du kan redistribuere og/eller<
 link_error=Linket "{0}" er ukorrekt og blev ikke indl\u00E6st
 link_not_available_any_more=Linket er ikke l\u00E6ngere gyldigt, da knudepunktet er blevet slettet.
 link_not_found=Linket {0} blev ikke fundet.
+links=Link
 load=Indl\u00E6s
 load_accelerator_presets=Indl\u00E6s
 LoadAcceleratorPresetsAction.textPatterns.text=Tekstm\u00F8nstre
@@ -758,10 +761,6 @@ menu_displayAttributes=Knudepunktsattributter
 menu_encryption=Kodeords-beskyttelse
 menu_error=Fejl i brugerdefineret menustruktur {0}:\n{1}\nafbryder
 menu_extensions=Knudepunkt udvidelser
-menu_extras=V\u00E6rkt\u00F8jer
-menu_file_import=Import
-menu_filter=Filter
-menu_format=Formater
 menu_group=Knudepunkt gruppe
 menu_hoverView=V\u00E6rkt\u00F8jstip
 menu_iconByCategory=Ikon efter kategori\u2026
@@ -769,26 +768,20 @@ menu_iconView=Ikoner
 menu_image=Billede
 menu_insert=Inds\u00E6t
 menu_latex_formula=LaTeX formel
-menu_links=Link
 menu_manageStyles=&Administrer typografier
 menu_moveNode=Flyt og sorter
-menu_navigate=Naviger
 menu_newNode=Nyt knudepunkt
 menu_node=Knudepunkt
 menu_node_features=Kn&udepunktsgenskaber
 menu_nodes=&Knudepunkter
 menu_nodeView=Knudepunkt kerne
-menu_notes=Note
 menu_noteView=Noter
 menu_openmaps=MindMaps
-menu_progress=Udviklingsikon (%)
 menu_remove_icons=Fjern ikoner
 menu_removeAttribute=Fjern attributten
 menu_select=V\u00E6lg
 menu_time=Tidsstyring
 menu_title=Knudepunkt kerne
-menu_toolbars=V\u00E6rkt\u00F8jslinjer
-menu_view=Vis
 menu_viewmode=Se indstillinger
 MenuUtils.invalid_menuitem={0} er ikke en gyldig menu element n\u00F8gle.
 mindmap=MindMap
@@ -810,6 +803,7 @@ ModesMenuAction.MindMap.text=MindMap editor
 most_recent_files=Seneste MindMap
 MoveToRootAction.text=G\u00E5 til roden
 NameConditionAction.text=Angiv navn
+navigate=Naviger
 NavigationNextMapAction.text=N\u00E6ste MindMap
 NavigationPreviousMapAction.text=Forrige MindMap
 new=&Ny
@@ -888,6 +882,7 @@ normal=Normal
 not_saved_for_image_error=MindMap skal gemmes, f\u00F8r du kan angive et billede med filh\u00E5ndtering
 not_saved_for_link_error=MindMap skal gemmes, f\u00F8r du kan angive et link med filh\u00E5ndtering
 note_window_location=Notepanel placering
+notes=Note
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Online MindMap dokumentation
@@ -1443,6 +1438,7 @@ PrintAction.text=Udskriv MindMap\u2026
 PrintDirectAction.text=Udskriv
 printing_settings=Udskriftskalering
 PrintPreviewAction.text=Vis udskrift...
+progress=Udviklingsikon (%)
 PropertyAction.dialog=Indstillinger
 PropertyAction.text=Indstillinger...
 QuickFilterAction.text=Hurtig filter
@@ -1800,6 +1796,7 @@ ToggleMenubarAction.text=Menulinien
 ToggleScrollbarsAction.text=Rullepaneler
 ToggleStatusAction.text=Vis statuslinje
 ToggleToolbarAction.text=V\u00E6rkt\u00F8jslinie
+toolbars=V\u00E6rkt\u00F8jslinjer
 undefined_error=En uventet fejl opstod. Pr\u00F8v venligt at lave en fejlrapport.
 underline=Understregning
 UnderlineAction.text=Understregning
@@ -1839,6 +1836,7 @@ user_template_dir=Brugerskabeloner
 user_zoom=Udskriv zoomfaktor (0.0 - 2.0):
 value_format=V\u00E6rdiformat
 version_up_to_date=Du bruger allerede den nyeste programversion
+view=Vis
 ViewerControllerAction.text=Eksternt objekt\u2026
 ViewLayoutTypeAction.OUTLINE.text=Dispositionsvisning
 WebDocuAction.text=Web Dokumentation
