--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -373,7 +373,7 @@ ExternalImageChangeAction.text=Bild tauschen...
 ExternalImageRemoveAction.text=Bild entfernen
 ExtractLinkFromTextAction.text=Link aus Knoten&text erzeugen
 ExtractLinkFromTextAction.tooltip=<html>Erzeugt aus einem Knotentext, der eine g\u00FCltige URL einth\u00E4lt <br> (z.B. http://www.google.de) einen Hyperlink </html>
-extras=Werkzeuge
+extras=&Werkzeuge
 f_button_unassigned=<nicht zugewiesen>
 FaqOpenURLAction.text=FAQ (H\u00E4ufig gestellte Fragen)
 file=&Datei
@@ -405,7 +405,7 @@ FileRevisionsDialog.question=Revisionen von {0} gefunden
 FileRevisionsDialog.restore=Wiederherstellen
 FileRevisionsDialog.restore.tooltip={0} durch {1} ersetzen
 FileRevisionsDialog.title=Dateirevisionen
-filter=Filter aktivieren
+filter=F&ilter
 filter_add=&Hinzuf\u00FCgen
 filter_and=&Und
 filter_any_text=Text, Details oder Notiz
@@ -481,6 +481,7 @@ FollowLinkAction.text=&Hyperlink folgen
 font=Schriftart
 FontFamilyAction.text=Schriftart
 FontSizeAction.text=Schriftgr\u00F6\u00DFe
+format=&Format
 format_invalid_pattern=kein g\u00FCltiges Format
 format_menu_cloud_shapes=Wolken
 format_menu_edge_styles=Linienf&ormen
@@ -683,7 +684,7 @@ IconSelectionPlugin.tooltip=<html>Ein Fenster erscheint, in dem ein Icon ausgew\
 image_covertLink=Link in Bild umwandeln
 ImageFlavorHandler=Bild (als separate Datei)
 images=Bilder
-import=Importieren
+import=Zweig i&mportieren
 import_export=Konvertieren
 import_linked_branch_no_link=Der ausgew\u00E4hlte Knoten ist mit keiner anderen Freeplane Datei verkn\u00FCpft, die importiert werden k\u00F6nnte.
 ImportAction.text=&Importieren
@@ -725,7 +726,7 @@ license_text=<html>Dieses Programm ist freie Software; es kann unter den Bedingu
 link_error=Falscher Link "{0}"  kann nicht geladen werden
 link_not_available_any_more=Die Verkn\u00FCpfung ist nicht mehr g\u00FCltig, da der Zielknoten in der Zwischenzeit gel\u00F6scht wurde.
 link_not_found=Link {0} nicht gefunden.
-links=Links
+links=Hyper&link
 load=&Laden
 load_accelerator_presets=Sammlung laden
 LoadAcceleratorPresetsAction.textPatterns.text=Text Muster
@@ -800,10 +801,6 @@ menu_displayAttributes=Knoten-&Attribute
 menu_encryption=&Passwort
 menu_error=Fehler in nutzerdefinierter Men\u00FC-Struktur {0}:\n{1}\nAbbruch
 menu_extensions=Knoten-&Erweiterungen
-menu_extras=&Werkzeuge
-menu_file_import=Zweig i&mportieren
-menu_filter=F&ilter
-menu_format=&Format
 menu_group=&Gruppierung
 menu_hoverView=Tooltips
 menu_iconByCategory=Icons nach Kategorie...
@@ -811,26 +808,20 @@ menu_iconView=Icons
 menu_image=Bild
 menu_insert=&Einf\u00FCgen
 menu_latex_formula=LaTeX Formel
-menu_links=Hyper&link
 menu_manageStyles=Knotenstile &verwalten
 menu_moveNode=Knoten an&ordnen
-menu_navigate=&Navigieren
 menu_newNode=&Neuer Knoten
 menu_node=Knoten
 menu_node_features=Knoten&eigenschaften
 menu_nodes=&Knoten
 menu_nodeView=Knoten-Umgebung
-menu_notes=Noti&z
 menu_noteView=Notizen
 menu_openmaps=Maps
-menu_progress=Fortschrittsicon (%)
 menu_remove_icons=Icons entfernen
 menu_removeAttribute=Attribute entfernen
 menu_select=Ausw\u00E4hlen
 menu_time=&Zeitmanagement
 menu_title=Knoten-&Inhalt
-menu_toolbars=Symbol&leisten
-menu_view=&Ansicht
 menu_viewmode=Ansichtseinstellungen
 menuname=Formel
 MenuUtils.invalid_menuitem={0} ist kein g\u00FCltiger Schl\u00FCssel f\u00FCr Men\u00FC-Elemente.
@@ -857,7 +848,7 @@ most_recent_files=&Zuletzt ge\u00F6ffnete Dateien
 MoveAction.text=Verschieben
 MoveToRootAction.text=&Wurzelknoten zentrieren
 NameConditionAction.text=Name &zuweisen
-navigate=Navigieren
+navigate=&Navigieren
 navigate_main=Start
 navigate_nodes=Knoten
 navigate_select=Ausw\u00E4hlen
@@ -933,7 +924,7 @@ normal=Normal
 not_saved_for_image_error=Die Mindmap muss gespeichert werden, bevor man ein Bild mit der Dateiauswahl setzen kann
 not_saved_for_link_error=Die Mindmap muss gespeichert werden, bevor ein Link per Dateiauswahl gesetzt werden kann
 note_window_location=Editor-&Position
-notes=Notizen
+notes=Noti&z
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Online-Mindmap-Dokumentation
@@ -1482,6 +1473,7 @@ PrintAction.text=&Drucken...
 PrintDirectAction.text=Drucken
 printing_settings=Druckskalierung
 PrintPreviewAction.text=&Vorschau...
+progress=Fortschrittsicon (%)
 PropertyAction.dialog=Einstellungen
 PropertyAction.text=Ein&stellungen...
 QuickFilterAction.text=&Schneller Filter
@@ -1858,7 +1850,7 @@ ToggleRibbonAction.text=Multifunktionsleiste minimieren
 ToggleScrollbarsAction.text=Rollbalken
 ToggleStatusAction.text=Statuszeile
 ToggleToolbarAction.text=&Werkzeuge
-toolbars=Symbolleisten
+toolbars=Symbol&leisten
 tools_and_settings=Werkzeuge und Einstellungen
 tools_misc=Verschiedenes
 tooltips=Schnellinfos
@@ -1901,7 +1893,7 @@ user_template_dir=Benutzerdefinierte Vorlagen
 user_zoom=Druckvergr\u00F6\u00DFerung (0.0 - 2.0):
 value_format=Zahlenformat
 version_up_to_date=Sie benutzen bereits die aktuellste Version
-view=Ansicht
+view=&Ansicht
 view_misc=Verschiedenes
 view_mode=Ansichtsmodus
 ViewerControllerAction.text=E&xternes Objekt...
