--- a/freeplane/resources/translations/Resources_es.properties
+++ b/freeplane/resources/translations/Resources_es.properties
@@ -353,6 +353,7 @@ ExternalImageChangeAction.text=Cambiar imagene externa...
 ExternalImageRemoveAction.text=Quitar imagen externa
 ExtractLinkFromTextAction.text=Hiperenlace desde el texto
 ExtractLinkFromTextAction.tooltip=Fijar el hiperenlace que se ha encontrado en el texto del nodo
+extras=Herramientas
 f_button_unassigned=No hay nada que hacer
 FaqOpenURLAction.text=FAQ
 file=Archivo
@@ -452,6 +453,7 @@ FollowLinkAction.text=Ir a:
 font=Fuente
 FontFamilyAction.text=Familia de la Fuente
 FontSizeAction.text=Tama\u00F1o de Fuente
+format=Formato
 format_invalid_pattern=No es un patr\u00F3n v\u00E1lido
 format_menu_cloud_shapes=Nube
 format_menu_edge_styles=Estilos de Bordes
@@ -679,6 +681,7 @@ license_text=<html>Este programa es software libre; puede redistribuirlo y/o<br>
 link_error=Enlace incorrecto, "{0}" no se carg\u00F3
 link_not_available_any_more=El enlace ya no es correcto. El nodo fue borrado.
 link_not_found=Enlace {0} no encontrado.
+links=Enlaces
 load=&Cargar
 load_accelerator_presets=Cargar
 LoadAcceleratorPresetsAction.textPatterns.text=Patrones para el texto
@@ -746,10 +749,6 @@ menu_displayAttributes=Atributos del nodo
 menu_encryption=Protecci\u00F3n con contrase\u00F1as
 menu_error=Error en la estructura del men\u00FA definido por el usuario {0}:\n{1}\nAbortando
 menu_extensions=Extensiones del nodo
-menu_extras=Herramientas
-menu_file_import=Importar
-menu_filter=Filtro
-menu_format=Formato
 menu_group=Grupo del nodo
 menu_hoverView=Ayuda sobre herramientas
 menu_iconByCategory=Icono por categor\u00EDa...
@@ -757,26 +756,20 @@ menu_iconView=Iconos
 menu_image=Imagen
 menu_insert=Insertar
 menu_latex_formula=F\u00F3rmula LaTeX
-menu_links=Enlaces
 menu_manageStyles=&Gestionar estilos
 menu_moveNode=Mover y organizar
-menu_navigate=&Navegar
 menu_newNode=Nuevo nodo
 menu_node=Nodo
 menu_node_features=Caracter\u00EDsticas del nodo
 menu_nodes=&Nodos
 menu_nodeView=Nodo central
-menu_notes=Notas
 menu_noteView=Notas
 menu_openmaps=Mapas
-menu_progress=Progreso
 menu_remove_icons=Quitar iconos
 menu_removeAttribute=Quitar atributo
 menu_select=Seleccionar
 menu_time=Gesti\u00F3n del tiempo
 menu_title=Nodo central
-menu_toolbars=Barras de herramientas
-menu_view=Ver
 menu_viewmode=Ver configuraci\u00F3n
 MenuUtils.invalid_menuitem={0} no es un elemento del men\u00FA v\u00E1lido.
 mindmap=Mapa
@@ -798,6 +791,7 @@ ModesMenuAction.MindMap.text=Editor de Mapa Conceptual
 most_recent_files=Archivos M\u00E1s Recientes
 MoveToRootAction.text=Mover a Ra\u00EDz
 NameConditionAction.text=Nombrar
+navigate=&Navegar
 NavigationNextMapAction.text=Siguiente Mapa
 NavigationPreviousMapAction.text=Mapa Previo
 new=Nuevo
@@ -867,6 +861,7 @@ normal=Normal
 not_saved_for_image_error=El mapa se debe guardar antes de que pueda escoger una imagen con el selector de archivos
 not_saved_for_link_error=El Mapa debe ser guardado antes de establecer un enlace con el selector de archivos
 note_window_location=Posici\u00F3n de la Nota
+notes=Notas
 ok=De Acuerdo
 OKAction.text=De Acuerdo
 OnlineReference.text=Documentaci\u00F3n de Mapas conceptuales en l\u00EDnea
@@ -1395,6 +1390,7 @@ PrintAction.text=Imprimir...
 PrintDirectAction.text=Imprimir
 printing_settings=Escalado de impresi\u00F3n
 PrintPreviewAction.text=Vista Previa...
+progress=Progreso
 PropertyAction.dialog=Preferencias
 PropertyAction.text=Preferencias ...
 QuickFilterAction.text=Filtro r\u00E1pido
@@ -1743,6 +1739,7 @@ ToggleMenubarAction.text=(Des)activar Barra de men\u00FA
 ToggleScrollbarsAction.text=Barras de desplazamiento
 ToggleStatusAction.text=Mostrar estado de l\u00EDnea
 ToggleToolbarAction.text=(Des)activar Barra de herramientas
+toolbars=Barras de herramientas
 undefined_error=Ocurri\u00F3 un error inesperado. Por favor reportelo a los desarrolladores de Freeplane.
 underline=Subrayar
 UnderlineAction.text=Subrayar
@@ -1779,6 +1776,7 @@ user_template_dir=Plantillas del usuario
 user_zoom=Factor de acercamiento de impresi\u00F3n (0.0 - 2.0):
 value_format=Valor del formato
 version_up_to_date=Est\u00E1 usando la \u00FAltima versi\u00F3n del programa
+view=Ver
 ViewerControllerAction.text=Objeto Externo...
 ViewLayoutTypeAction.OUTLINE.text=Vista en esquema
 WebDocuAction.text=Documentaci\u00F3n Web
