--- a/freeplane/resources/translations/Resources_et.properties
+++ b/freeplane/resources/translations/Resources_et.properties
@@ -163,12 +163,13 @@ ExportToImage.png.text=Kui PNG...
 ExportToOoWriter.text=Kui OpenOffice.org Writer-i dokument...
 ExportToOoWriter.tooltip=Lahtivolditud s\u00F5lmed muudavad struktuuri, kokkuvolditud s\u00F5lmed dokumendi sisu.
 extension_menu=F\u00FC\u00FCsiline &Stiil
+extras=&T\u00F6\u00F6riistad
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=KKK
 file=&Fail
 file_already_exists=Fail nimega {0} on juba olemas. Kas soovid seda \u00FCle kirjutada?
 file_not_found=Faili {0} ei leitud
-filter=Filter
+filter=Filter[translate me]
 filter_add=&Lisa
 filter_and=&ja
 filter_conditions=Filtrid
@@ -204,6 +205,7 @@ FollowLinkAction.text=Ava h\u00FCperviide
 font=Kirjat\u00FC\u00FCp
 FontFamilyAction.text=kirja perekond
 FontSizeAction.text=kirja suurus
+format=&Vormindus
 format_menu_edge_styles=&\u00DChendusjoone stiilid
 format_menu_edge_widths=\u00DChendusjoone &Laiused
 FormatCopy.text=Kopeeri kujundus
@@ -322,7 +324,7 @@ IconGroupPopupAction.miscellaneous.text=Miscellaneous[translate me]
 IconGroupPopupAction.office.text=Office[translate me]
 IconSelectionPlugin.text=Vali ikoon...
 IconSelectionPlugin.tooltip=<html>Siin saab valida ikooni, kasutades selleks alamakent.</html>
-import=Import
+import=&Impordi
 import_linked_branch_no_link=Valitud s\u00F5lmel ei ole \u00FChtki viidet importida.
 ImportAction.text=&Impordi
 ImportBranchAction.text=Haru...
@@ -352,13 +354,7 @@ map_locked_by_open={0} kaarti redigeerib juba {1} kasutaja. Avan vaid lugemisre\
 map_locked_by_save_as={0} kaart on parasjagu {1} kasutaja poolt redigeerimisel. Tegevus Salvesta kui katkestati.
 map_not_saved=Kaarti ei ole enne salvestatud.
 menu_attributes=&Omadused
-menu_extras=&T\u00F6\u00F6riistad
-menu_file_import=&Impordi
-menu_filter=Filter[translate me]
-menu_format=&Vormindus
 menu_insert=&Lisamine
-menu_navigate=&Liikumine
-menu_view=&Vaade
 mindmap=M\u00F5ttekaart
 mindmaps=M\u00F5ttekaardid
 mindmaps_desc=M\u00F5ttekaardid (*.mm)
@@ -373,6 +369,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=&Enimkasutatavad failid
 MoveToRootAction.text=Liigu algusesse
+navigate=&Liikumine
 NavigationNextMapAction.text=J\u00E4rgmine kaart
 NavigationPreviousMapAction.text=Eelmine kaart
 new_mindmap=Uus m\u00F5ttekaart
@@ -973,6 +970,7 @@ UsePlainTextAction.text=Kasuta paljast teksti
 user_defined_zoom=Kasutaja m\u00E4\u00E4ratud
 user_defined_zoom_status_bar=Suurenduse muutmine kasutaja poolt m\u00E4\u00E4ratud v\u00E4\u00E4rtusele {0}%.
 user_zoom=Tr\u00FCkkimise suurendus (0.0 - 2.0):
+view=&Vaade
 WebDocuAction.text=Dokumentatsioon internetis
 width=Laius
 yes=Jah
