--- a/freeplane/resources/translations/Resources_gl.properties
+++ b/freeplane/resources/translations/Resources_gl.properties
@@ -152,12 +152,12 @@ ExportToImage.jpg.text=Como JPEG...
 ExportToImage.png.text=Como PNG...
 ExportToOoWriter.tooltip=Os nodos despregados forman a estrutura e os pregados o contido do documento.
 extension_menu=Estilo f\u00EDsico
+extras=Ferramentas
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=FAQ
 file=Ficheiro
 file_already_exists=O ficheiro {0} xa existe. Desexa sobrescribilo?
 file_not_found=Non se atopou o Ficheiro {0}
-filter=Filtro
 filter_and=E
 filter_conditions=Filtros
 filter_contains=Cont\u00E9n
@@ -191,6 +191,7 @@ FollowLinkAction.text=Abrir a hiperligaz\u00F3n:
 font=Tipo de letra
 FontFamilyAction.text=Familia de tipo de letra
 FontSizeAction.text=Tama\u00F1o do tipo de letra
+format=Formato
 format_menu_edge_styles=Estilo dos arcos
 format_menu_edge_widths=Largura dos arcos
 FormatCopy.text=Copiar o fomato
@@ -322,12 +323,7 @@ map_locked_by_open=O mapa {0} est\u00E1 a ser editado polo usuario {1}. Abrir co
 map_locked_by_save_as=O mapa {0} est\u00E1 a ser editado polo usuario {1}. Interrompeuse a acci\u00F3n Gardar como.
 MapBackgroundColorAction.text=Map Background[translate me]
 menu_attributes=Atributos
-menu_extras=Ferramentas
-menu_file_import=Importar
-menu_format=Formato
 menu_insert=Inserir
-menu_navigate=Navegar
-menu_view=Ver
 mindmap=Mapa
 mindmaps=Mapas
 mindmaps_desc=Mapas (*.mm)
@@ -342,6 +338,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Ficheiros m\u00E1is recentes
 MoveToRootAction.text=Ir \u00E1 ra\u00EDz
+navigate=Navegar
 NavigationNextMapAction.text=Seguinte mapa
 NavigationPreviousMapAction.text=Mapa anterior
 new_mindmap=Novo mapa mental
@@ -849,6 +846,7 @@ UsePlainTextAction.text=Usar texto plano
 user_defined_zoom=Definido polo usuario.
 user_defined_zoom_status_bar=Modificar o zoom ao valor de zoom de {0}% definido polo usuario.
 user_zoom=Factor de zoom da copia impresa (0.0 - 2.0):
+view=Ver
 WebDocuAction.text=Documentaci\u00F3n web
 width=Largura
 yes=Si
