--- a/freeplane/resources/translations/Resources_id.properties
+++ b/freeplane/resources/translations/Resources_id.properties
@@ -168,12 +168,13 @@ ExportToImage.png.text=Sebagai PNG...
 ExportToOoWriter.text=Sebagai dokumen OpenOffice.org Writer...
 ExportToOoWriter.tooltip=Node terbuka berdasarkan strukturnya, node terlipat berdasarkan isi dokumen.
 extension_menu=Gaya &Fisik
+extras=A&lat
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=FAQ
 file=Be&rkas
 file_already_exists=Berkas {0} sudah ada. Apakah Anda hendak menimpanya?
 file_not_found=Berkas {0} tidak ditemukan
-filter=Filter
+filter=Filter[translate me]
 filter_add=Tambah
 filter_and=And (Dan)
 filter_conditions=Filter
@@ -209,6 +210,7 @@ FollowLinkAction.text=Buka Hipertaut
 font=Font
 FontFamilyAction.text=font
 FontSizeAction.text=ukuran font
+format=F&ormat
 format_menu_edge_styles=Gaya &Tangkai
 format_menu_edge_widths=&Lebar Tangkai
 FormatCopy.text=Salin Format
@@ -316,7 +318,7 @@ IconGroupPopupAction.miscellaneous.text=Miscellaneous[translate me]
 IconGroupPopupAction.smiley.text=Smiley[translate me]
 IconSelectionPlugin.text=Pilih Ikon...
 IconSelectionPlugin.tooltip=<html>Dengan ini, ikon dapat dipilih lewat suatu jendela.</html>
-import=Impor
+import=I&mpor
 import_linked_branch_no_link=Node terpilih tidak bertaut pada sesuatu yang dapat diimpor.
 ImportAction.text=Impor
 ImportBranchAction.text=Cabang...
@@ -346,13 +348,7 @@ map_locked_by_open=Peta {0} sedang diedit oleh pemakai {1}. Dibuka untuk baca-sa
 map_locked_by_save_as=Peta {0} sedang diedit oleh pemakai {1}. Perintah Simpan Sebagai dibatalkan.
 map_not_saved=Peta belum disimpan sebelumnya.
 menu_attributes=&Atribut
-menu_extras=A&lat
-menu_file_import=I&mpor
-menu_filter=Filter[translate me]
-menu_format=F&ormat
 menu_insert=&Sisip
-menu_navigate=&Navigasi
-menu_view=&Tampakan
 mindmap=Peta
 mindmaps=Peta
 mindmaps_desc=Peta (*.mm)
@@ -367,6 +363,7 @@ modes=Modus
 ModesMenuAction.File.text=File Explorer[translate me]
 most_recent_files=Be&rkas Terkini
 MoveToRootAction.text=Pergi ke Akar
+navigate=&Navigasi
 NavigationNextMapAction.text=Peta Berikutnya
 NavigationPreviousMapAction.text=Peta Sebelumnya
 new_mindmap=Peta Baru
@@ -964,6 +961,7 @@ UsePlainTextAction.text=Gunakan Teks Polos
 user_defined_zoom=Setelan pemakai.
 user_defined_zoom_status_bar=Mengubah zum sesuai setelan pemakai di {0}%.
 user_zoom=Faktor Zum Pencetakan (0.0 - 2.0):
+view=&Tampakan
 WebDocuAction.text=Dokumentasi Web
 width=Lebar
 yes=Ya
