--- a/freeplane/resources/translations/Resources_it.properties
+++ b/freeplane/resources/translations/Resources_it.properties
@@ -351,6 +351,7 @@ ExternalImageChangeAction.text=Modifica Immagine Esterna...
 ExternalImageRemoveAction.text=Rimuovi Immagine Esterna
 ExtractLinkFromTextAction.text=Collegamenti ipertestuali dal testo
 ExtractLinkFromTextAction.tooltip=Setta i collegamenti ipertestuali trovati nei nodi di testo
+extras=&Strumenti
 f_button_unassigned=<nessuna azione>
 FaqOpenURLAction.text=FAQ
 file=&File
@@ -381,7 +382,7 @@ FileRevisionsDialog.question=Trovate revisioni di {0}
 FileRevisionsDialog.restore=Riprist&ina
 FileRevisionsDialog.restore.tooltip=Rimpiazzare {0} con {1}
 FileRevisionsDialog.title=Revisioni File
-filter=Filtro
+filter=Fi&ltra
 filter_add=&Aggiungi
 filter_and=E
 filter_any_text=Cuore, dettagli o note
@@ -450,6 +451,7 @@ FollowLinkAction.text=Segui collegamento
 font=Carattere
 FontFamilyAction.text=Tipo Carattere
 FontSizeAction.text=Dimensione carattere
+format=F&ormato
 format_invalid_pattern=Schema non valido
 format_menu_cloud_shapes=Nuvola
 format_menu_edge_styles=&Stile dei collegamenti
@@ -643,7 +645,7 @@ IconSelectionPlugin.text=Seleziona icona...
 IconSelectionPlugin.tooltip=<html>Qui \u00E8possibile selezionare un'icona usando una sottofinestra.</html>
 image_covertLink=Convertire Link in Immagine
 ImageFlavorHandler=Immagine (In File separato)
-import=Importa
+import=I&mporta
 import_linked_branch_no_link=Il seguente nodo non ha link da cui importare.
 ImportAction.text=&Importa
 ImportBranchAction.text=Importa ramo...
@@ -673,6 +675,7 @@ license_text=<html>This program is free software; you can redistribute it and/or
 link_error=Errato collegamento "{0}" non caricato
 link_not_available_any_more=Il collegamento non \u00E8 pi\u00F9 valido. Il nodo \u00E8 stato cancellato nel frattempo.
 link_not_found=Collegamento {0} non trovato.
+links=Collegamenti
 load=&Carica
 load_accelerator_presets=Carica
 LoadAcceleratorPresetsAction.textPatterns.text=Schemi di testo
@@ -740,10 +743,6 @@ menu_displayAttributes=Attributi Nodo
 menu_encryption=Criptatura
 menu_error=Errore nella struttura menu definita dall''utente {0}:\n{1}\nAnnullato
 menu_extensions=Estensioni Nodo
-menu_extras=&Strumenti
-menu_file_import=I&mporta
-menu_filter=Fi&ltra
-menu_format=F&ormato
 menu_group=Gruppo Nodo
 menu_hoverView=Suggerimenti Tool Tip
 menu_iconByCategory=Icone per categoria...
@@ -751,25 +750,19 @@ menu_iconView=Icone
 menu_image=Immagine
 menu_insert=In&serisci
 menu_latex_formula=Formula LaTeX
-menu_links=Collegamenti
 menu_manageStyles=Gestione Stili
 menu_moveNode=Sposta e Ordina
-menu_navigate=&Naviga
 menu_newNode=Nuovo Nodo
 menu_node=Nodo
 menu_node_features=Caratteristiche nodi
 menu_nodes=&Nodi
 menu_nodeView=Cuore del Nodo
-menu_notes=Note
 menu_noteView=Note
-menu_progress=Avanzamento
 menu_remove_icons=Rimuovere le icone
 menu_removeAttribute=Rimuovere Attributi
 menu_select=Seleziona
 menu_time=Gestione Tempi
 menu_title=Cuore del Nodo
-menu_toolbars=Barre Strumenti
-menu_view=&Visualizza
 menu_viewmode=Visualizza Impostazioni
 MenuUtils.invalid_menuitem={0} non \u00E8 una voce del menu valida.
 mindmap=Mappa
@@ -791,6 +784,7 @@ ModesMenuAction.MindMap.text=Editor mappe mentali
 most_recent_files=&File recenti
 MoveToRootAction.text=Vai al nodo centrale
 NameConditionAction.text=Imposta nome
+navigate=&Naviga
 NavigationNextMapAction.text=Mappa successiva
 NavigationPreviousMapAction.text=Mappa precedente
 new=&Nuovo
@@ -860,6 +854,7 @@ normal=Normale
 not_saved_for_image_error=La mappa deve essere salvata, prima di impostare una immagine da file
 not_saved_for_link_error=La mappa deve essere salvata, prima di scegliere un collegamento col selettore file.
 note_window_location=Posizione finestra delle note
+notes=Note
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Mappa documentazione Online
@@ -1372,6 +1367,7 @@ PrintAction.text=Stampa...
 PrintDirectAction.text=Stampa
 printing_settings=Scalatura stampa
 PrintPreviewAction.text=Anteprima di stampa...
+progress=Avanzamento
 PropertyAction.dialog=Preferenze
 PropertyAction.text=Preferenze...
 QuickFilterAction.text=Filtro Veloce
@@ -1716,6 +1712,7 @@ ToggleLeftToolbarAction.text=&Barra delle icone
 ToggleMenubarAction.text=Barra dei menu
 ToggleStatusAction.text=Visualizza la Linea di Stato
 ToggleToolbarAction.text=&Barra degli strumenti
+toolbars=Barre Strumenti
 undefined_error=Si \u00E8 verificato un errore imprevisto. Inviare un rapporto errori, grazie.
 underline=Sottolinea
 UnderlineAction.text=Sottolinea
@@ -1744,6 +1741,7 @@ user_template_dir=Modelli Utente
 user_zoom=Fattore ingradimento stampa (0.0 - 2.0):
 value_format=Formato valore
 version_up_to_date=E' gi\u00E0 in uso la versione pi\u00F9 aggiornata
+view=&Visualizza
 ViewerControllerAction.text=Immagini Ridimensionabili
 ViewLayoutTypeAction.OUTLINE.text=Visualizzazione lineare ad albero
 WebDocuAction.text=Documentazione web
