--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -357,6 +357,7 @@ ExternalImageChangeAction.text=\u753B\u50CF\u3092\u5909\u66F4
 ExternalImageRemoveAction.text=\u753B\u50CF\u3092\u524A\u9664
 ExtractLinkFromTextAction.text=\u30CE\u30FC\u30C9\u6587\u5B57\u5217\u304B\u3089\u30EA\u30F3\u30AF\u8A2D\u5B9A
 ExtractLinkFromTextAction.tooltip=\u30CE\u30FC\u30C9\u306B\u542B\u307E\u308C\u308B\u6587\u5B57\u5217\u3092\u57FA\u306B\u30CF\u30A4\u30D1\u30FC\u30EA\u30F3\u30AF\u3092\u8A2D\u5B9A\u3057\u307E\u3059\u3002
+extras=\u30C4\u30FC\u30EB(&T)
 f_button_unassigned=\uFF1C\u672A\u5B9A\u7FA9\uFF1E
 FaqOpenURLAction.text=\u3088\u304F\u3042\u308B\u8CEA\u554F
 file=\u30D5\u30A1\u30A4\u30EB(&F)
@@ -387,7 +388,7 @@ FileRevisionsDialog.question={0} \u306E\u66F4\u65B0\u30D5\u30A1\u30A4\u30EB\u304
 FileRevisionsDialog.restore=\u5FA9\u5143(&O)
 FileRevisionsDialog.restore.tooltip={0} \u3092 {1} \u306B\u7F6E\u63DB\u3057\u307E\u3059\u3002
 FileRevisionsDialog.title=\u30D5\u30A1\u30A4\u30EB\u306E\u66F4\u65B0
-filter=\u30D5\u30A3\u30EB\u30BF
+filter=\u30D5\u30A3\u30EB\u30BF(&I)
 filter_add=\u5C5E\u6027\u540D\u30FB\u5024\u3092\u4ED8\u52A0(&A)
 filter_and=And(&N)
 filter_any_text=\u30B3\u30A2\u30C6\u30AD\u30B9\u30C8\u3001\u8A73\u7D30\u3001\u53C8\u306F\u30CE\u30FC\u30C8\u3000
@@ -456,6 +457,7 @@ FollowLinkAction.text=\u30EA\u30F3\u30AF\u5148\u3078\u30B8\u30E3\u30F3\u30D7
 font=\u30D5\u30A9\u30F3\u30C8
 FontFamilyAction.text=\u30D5\u30A9\u30F3\u30C8\u540D
 FontSizeAction.text=\u6587\u5B57\u30B5\u30A4\u30BA
+format=\u66F8\u5F0F(&O)
 format_invalid_pattern=\u30D1\u30BF\u30FC\u30F3\u5024\u304C\u4E0D\u9069\u5207
 format_menu_cloud_shapes=\u96F2\uFF08\u4ED8\u52A0 or \u5F62\u3092\u5909\u66F4\uFF09
 format_menu_edge_styles=\u7DDA\u306E\u5F62\u72B6(&E)
@@ -649,7 +651,7 @@ IconSelectionPlugin.text=\u30A2\u30A4\u30B3\u30F3\u4E00\u89A7\u304B\u3089\u9078\
 IconSelectionPlugin.tooltip=\u30B5\u30D6\u30A6\u30A3\u30F3\u30C9\u30A6\u306B\u30A2\u30A4\u30B3\u30F3\u7FA4\u3092\u8868\u793A\u3057\u3001\u9078\u629E\u3059\u308B\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002
 image_covertLink=\u30EA\u30F3\u30AF\u3092\u753B\u50CF\u306B\u5909\u63DB
 ImageFlavorHandler=\u753B\u50CF(\u72EC\u7ACB\u30D5\u30A1\u30A4\u30EB\u3092\u4F7F\u7528)
-import=\u30A4\u30F3\u30DD\u30FC\u30C8
+import=\u30DE\u30C3\u30D7\u306B\u30A4\u30F3\u30DD\u30FC\u30C8(&M)
 import_linked_branch_no_link=\u9078\u629E\u4E2D\u306E\u30CE\u30FC\u30C9\u306B\u8AAD\u307F\u8FBC\u3081\u308B\u30EA\u30F3\u30AF\u304C\u3042\u308A\u307E\u305B\u3093\u3002
 ImportAction.text=\u30DE\u30C3\u30D7\u306B\u30A4\u30F3\u30DD\u30FC\u30C8(&I)
 ImportBranchAction.text=\u5225\u30DE\u30C3\u30D7\u3092\u679D\u3068\u3057\u3066(&B)...
@@ -688,6 +690,7 @@ license_text=<html>This program is free software; you can redistribute it and/or
 link_error=\u30EA\u30F3\u30AF\u304C\u4E0D\u9069\u5207\u3067\u3059\u3002\u30EA\u30F3\u30AF "{0}" \u3092\u8AAD\u307F\u8FBC\u3080\u3053\u3068\u304C\u3067\u304D\u307E\u305B\u3093\u3002
 link_not_available_any_more=\u30CE\u30FC\u30C9\u304C\u9014\u4E2D\u3067\u524A\u9664\u3055\u308C\u305F\u305F\u3081\u3001\u30EA\u30F3\u30AF\u306F\u7121\u52B9\u3067\u3059\u3002
 link_not_found=\u30EA\u30F3\u30AF\u5148 {0} \u306F\u5B58\u5728\u3057\u307E\u305B\u3093\u3002
+links=\u30EA\u30F3\u30AF
 load=\u8AAD\u307F\u8FBC\u307F(&L)
 load_accelerator_presets=\u8AAD\u307F\u8FBC\u307F
 LoadAcceleratorPresetsAction.textPatterns.text=\u30C6\u30AD\u30B9\u30C8\u30D1\u30BF\u30FC\u30F3
@@ -755,10 +758,6 @@ menu_displayAttributes=\u5C5E\u6027
 menu_encryption=\u30D1\u30B9\u30EF\u30FC\u30C9\u3067\u4FDD\u8B77
 menu_error=\u30E6\u30FC\u30B6\u306E\u5B9A\u7FA9\u3057\u305F\u30E1\u30CB\u30E5\u30FC\u69CB\u9020 {0} \u306B\u30A8\u30E9\u30FC\u304C\u3042\u308A\u307E\u3059\u3002\uFF1A\n{1}\n\u4E2D\u6B62\u3057\u307E\u3057\u305F\u3002
 menu_extensions=\u30CE\u30FC\u30C9\u62E1\u5F35\u60C5\u5831
-menu_extras=\u30C4\u30FC\u30EB(&T)
-menu_file_import=\u30DE\u30C3\u30D7\u306B\u30A4\u30F3\u30DD\u30FC\u30C8(&M)
-menu_filter=\u30D5\u30A3\u30EB\u30BF(&I)
-menu_format=\u66F8\u5F0F(&O)
 menu_group=\u30CE\u30FC\u30C9\u30B0\u30EB\u30FC\u30D7
 menu_hoverView=\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7
 menu_iconByCategory=\u985E\u5225\u30A2\u30A4\u30B3\u30F3
@@ -766,26 +765,20 @@ menu_iconView=\u30A2\u30A4\u30B3\u30F3
 menu_image=\u753B\u50CF
 menu_insert=\u633F\u5165(&S)
 menu_latex_formula=LaTex \u6570\u5F0F
-menu_links=\u30EA\u30F3\u30AF
 menu_manageStyles=\u30B9\u30BF\u30A4\u30EB\u3092\u7BA1\u7406(&M)
 menu_moveNode=\u30CE\u30FC\u30C9\u306E\u79FB\u52D5\u3068\u4E26\u3079\u66FF\u3048
-menu_navigate=\u30CA\u30D3\u30B2\u30FC\u30B7\u30E7\u30F3(&N)
 menu_newNode=\u65B0\u898F\u30CE\u30FC\u30C9\u4F5C\u6210
 menu_node=\u30CE\u30FC\u30C9
 menu_node_features=\u30CE\u30FC\u30C9\u306E\u6A5F\u80FD(&U)
 menu_nodes=\u30CE\u30FC\u30C9(&N)
 menu_nodeView=\u30CE\u30FC\u30C9\u30B3\u30A2\u95A2\u9023
-menu_notes=\u30CE\u30FC\u30C8
 menu_noteView=\u30CE\u30FC\u30C8
 menu_openmaps=\u30DE\u30C3\u30D7
-menu_progress=\u9032\u6357\u5EA6
 menu_remove_icons=\u30A2\u30A4\u30B3\u30F3\u3092\u524A\u9664
 menu_removeAttribute=\u5C5E\u6027\u3092\u524A\u9664
 menu_select=\u9078\u629E
 menu_time=\u6642\u9593\u7BA1\u7406
 menu_title=\u30CE\u30FC\u30C9\u30B3\u30A2\u95A2\u9023
-menu_toolbars=\u30C4\u30FC\u30EB\u30D0\u30FC
-menu_view=\u8868\u793A(&V)
 menu_viewmode=\u30D3\u30E5\u30FC\u30E2\u30FC\u30C9
 MenuUtils.invalid_menuitem=\u30E1\u30CB\u30E5\u30FC\u9805\u76EE\u30AD\u30FC {0}  \u306F\u7121\u52B9\u3067\u3059\u3002
 mindmap=\u30DE\u30C3\u30D7
@@ -807,6 +800,7 @@ ModesMenuAction.MindMap.text=\u30DE\u30C3\u30D7\u7DE8\u96C6\u30E2\u30FC\u30C9
 most_recent_files=\u6700\u8FD1\u4F7F\u3063\u305F\u30DE\u30C3\u30D7
 MoveToRootAction.text=\u30EB\u30FC\u30C8\u30CE\u30FC\u30C9\u3078\u30B8\u30E3\u30F3\u30D7
 NameConditionAction.text=\u540D\u79F0\u3092\u6307\u5B9A
+navigate=\u30CA\u30D3\u30B2\u30FC\u30B7\u30E7\u30F3(&N)
 NavigationNextMapAction.text=\u6B21\u306E\u30DE\u30C3\u30D7
 NavigationPreviousMapAction.text=\u524D\u306E\u30DE\u30C3\u30D7
 new=\u65B0\u898F(&N)
@@ -879,6 +873,7 @@ normal=\u901A\u5E38
 not_saved_for_image_error=\u753B\u50CF\u30D5\u30A1\u30A4\u30EB\u3092\u9078\u5B9A\u3059\u308B\u524D\u306B\u3001\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 not_saved_for_link_error=\u30EA\u30F3\u30AF\u30D5\u30A1\u30A4\u30EB\u3092\u9078\u5B9A\u3059\u308B\u524D\u306B\u3001\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 note_window_location=\u30CE\u30FC\u30C8\u30D1\u30CD\u30EB\u306E\u4F4D\u7F6E
+notes=\u30CE\u30FC\u30C8
 ok=OK(&O)
 OKAction.text=OK(&O)
 OnlineReference.text=\u30DE\u30CB\u30E5\u30A2\u30EB\u30DE\u30C3\u30D7\uFF08\u30AA\u30F3\u30E9\u30A4\u30F3\uFF09
@@ -1425,6 +1420,7 @@ PrintAction.text=\u30DE\u30C3\u30D7\u3092\u5370\u5237(&P)...
 PrintDirectAction.text=\u5370\u5237
 printing_settings=\u5370\u5237\u30B5\u30A4\u30BA\u3092\u6307\u5B9A
 PrintPreviewAction.text=\u5370\u5237\u30D7\u30EC\u30D3\u30E5\u30FC(&V)...
+progress=\u9032\u6357\u5EA6
 PropertyAction.dialog=\u74B0\u5883\u8A2D\u5B9A
 PropertyAction.text=\u74B0\u5883\u8A2D\u5B9A...
 QuickFilterAction.text=\u30AF\u30A3\u30C3\u30AF\u30D5\u30A3\u30EB\u30BF
@@ -1781,6 +1777,7 @@ ToggleMenubarAction.text=\u30E1\u30CB\u30E5\u30FC\u30D0\u30FC
 ToggleScrollbarsAction.text=\u30B9\u30AF\u30ED\u30FC\u30EB\u30D0\u30FC
 ToggleStatusAction.text=\u30B9\u30C6\u30FC\u30BF\u30B9\u30D0\u30FC\u3092\u8868\u793A
 ToggleToolbarAction.text=\u30C4\u30FC\u30EB\u30D0\u30FC(&T)
+toolbars=\u30C4\u30FC\u30EB\u30D0\u30FC
 undefined_error=\u4E88\u671F\u3057\u306A\u3044\u30A8\u30E9\u30FC\u304C\u304A\u304D\u307E\u3057\u305F\u3002\u30D0\u30B0\u3092\u5831\u544A\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 underline=\u4E0B\u7DDA
 UnderlineAction.text=\u4E0B\u7DDA
@@ -1820,6 +1817,7 @@ user_template_dir=\u30E6\u30FC\u30B6\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8
 user_zoom=\u3000\u3000\u3000\u5370\u5237\u500D\u7387[0.0 - 2.0]\uFF1A
 value_format=\u5C5E\u6027\u5024\u306E\u66F8\u5F0F
 version_up_to_date=\u3054\u4F7F\u7528\u4E2D\u306E\u3082\u306E\u304C\u6700\u65B0\u30D0\u30FC\u30B8\u30E7\u30F3\u3067\u3059\u3002
+view=\u8868\u793A(&V)
 ViewerControllerAction.text=\u5916\u90E8\u30AA\u30D6\u30B8\u30A7\u30AF\u30C8...
 ViewLayoutTypeAction.OUTLINE.text=\u30A2\u30A6\u30C8\u30E9\u30A4\u30F3\u30D3\u30E5\u30FC
 WebDocuAction.text=Web\u30C9\u30AD\u30E5\u30E1\u30F3\u30C8
