--- a/freeplane/resources/translations/Resources_ko.properties
+++ b/freeplane/resources/translations/Resources_ko.properties
@@ -353,6 +353,7 @@ ExternalImageChangeAction.text=\uC774\uBBF8\uC9C0 \uBCC0\uACBD...
 ExternalImageRemoveAction.text=\uC774\uBBF8\uC9C0 \uC81C\uAC70
 ExtractLinkFromTextAction.text=\uD14D\uC2A4\uD2B8 \uB0B4\uBD80\uC5D0\uC11C \uB9C1\uD06C \uBCC0\uD658
 ExtractLinkFromTextAction.tooltip=\uC8FC\uC18C n \uB178\uB4DC \uD14D\uC2A4\uD2B8\uC5D0\uC11C \uD558\uC774\uD37C \uB9C1\uD06C\uB97C \uC124\uC815
+extras=\uB3C4\uAD6C(&T)
 f_button_unassigned=<\uB3D9\uC791 \uC5C6\uC74C>
 FaqOpenURLAction.text=\uC790\uC8FC \uBB3B\uB294 \uC9C8\uBB38
 file=\uD30C\uC77C(&F)
@@ -383,7 +384,7 @@ FileRevisionsDialog.question={0} \uC758 \uAC1C\uC815\uD310\uC744 \uBC1C\uACAC\uD
 FileRevisionsDialog.restore=\uBCF5\uC6D0(&o)
 FileRevisionsDialog.restore.tooltip={0}\uC744(\uB97C) {1}(\uC73C)\uB85C \uB300\uCE58
 FileRevisionsDialog.title=\uD30C\uC77C \uAC1C\uC815\uD310
-filter=\uD544\uD130
+filter=\uD544\uD130(&I)
 filter_add=\uCD94\uAC00(&A)
 filter_and=\uADF8\uB9AC\uACE0( &n)
 filter_any_text=\uD45C\uC81C, \uC138\uBD80 \uC0AC\uD56D \uB610\uB294 \uB178\uD2B8
@@ -452,6 +453,7 @@ FollowLinkAction.text=\uB9C1\uD06C \uB530\uB77C\uAC00\uAE30
 font=\uAE00\uAF34
 FontFamilyAction.text=\uD3F0\uD2B8 \uC885\uB958
 FontSizeAction.text=\uD3F0\uD2B8 \uD06C\uAE30
+format=\uBAA8\uC591
 format_invalid_pattern=\uC720\uD6A8\uD558\uC9C0 \uC54A\uC740 \uD328\uD134
 format_menu_cloud_shapes=\uAD6C\uB984\uC744 \uCD94\uAC00\uD558\uAC70\uB098 \uC2A4\uD0C0\uC77C \uBCC0\uACBD
 format_menu_edge_styles=\uC904\uAE30 \uC2A4\uD0C0\uC77C(&E)
@@ -645,7 +647,7 @@ IconSelectionPlugin.text=\uC544\uC774\uCF58 \uC120\uD0DD...
 IconSelectionPlugin.tooltip=<html>\uBCC4\uB3C4\uC758 \uCC3D\uC5D0\uC11C \uC544\uC774\uCF58\uC744 \uC120\uD0DD\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.</html>
 image_covertLink=\uB9C1\uD06C\uB97C \uC774\uBBF8\uC9C0\uB85C \uBCC0\uD658
 ImageFlavorHandler=\uC774\uBBF8\uC9C0 (use separate file)
-import=\uAC00\uC838\uC624\uAE30
+import=\uAC00\uC838\uC624\uAE30(&M)
 import_linked_branch_no_link=\uC120\uD0DD\uD55C \uB178\uB4DC\uC5D0\uB294 \uAC00\uC838\uC62C \uB9C1\uD06C\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 ImportAction.text=\uB9F5 \uAC00\uC838\uC624\uAE30(&I)
 ImportBranchAction.text=\uAC00\uC9C0(&B)...
@@ -679,6 +681,7 @@ license_text=<html> \uC774 \uD504\uB85C\uADF8\uB7A8\uC740 \uC790\uC720 \uC18C\uD
 link_error=\uC798\uBABB\uB41C \uB9C1\uD06C "{0}"\uC740(\uB294) \uBD88\uB7EC\uC624\uC9C0 \uC54A\uC74C
 link_not_available_any_more=\uC5F0\uACB0\uB418\uC5C8\uB358 \uB178\uB4DC\uAC00 \uC0AD\uC81C\uB418\uC5C8\uC73C\uBBC0\uB85C \uC774 \uB9C1\uD06C\uB294 \uB354\uC774\uC0C1 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 link_not_found={0} \uB9C1\uD06C\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+links=\uB9C1\uD06C
 load=\uBD88\uB7EC\uC624\uAE30(&L)
 load_accelerator_presets=\uBD88\uB7EC\uC624\uAE30
 LoadAcceleratorPresetsAction.textPatterns.text=\uAE00\uC790 \uD328\uD134
@@ -746,10 +749,6 @@ menu_displayAttributes=\uB178\uB4DC \uC18D\uC131
 menu_encryption=\uC554\uD638 \uBCF4\uD638
 menu_error=\uC0AC\uC6A9\uC790 \uC815\uC758\uB41C \uBA54\uB274 \uAD6C\uC870\uC758 \uC624\uB958:{0}\n{1}\n\uC911\uB2E8
 menu_extensions=\uB178\uB4DC \uD655\uC7A5 \uAE30\uB2A5
-menu_extras=\uB3C4\uAD6C(&T)
-menu_file_import=\uAC00\uC838\uC624\uAE30(&M)
-menu_filter=\uD544\uD130(&I)
-menu_format=\uBAA8\uC591
 menu_group=\uB178\uB4DC \uADF8\uB8F9
 menu_hoverView=\uB3C4\uAD6C \uD301
 menu_iconByCategory=\uBD84\uB958\uBCC4 \uC544\uC774\uCF58...
@@ -757,26 +756,20 @@ menu_iconView=\uC544\uC774\uCF58
 menu_image=\uC774\uBBF8\uC9C0
 menu_insert=\uC0BD\uC785(&S)
 menu_latex_formula=LaTeX \uC218\uC2DD
-menu_links=\uB9C1\uD06C
 menu_manageStyles=\uC2A4\uD0C0\uC77C \uAD00\uB9AC(&M)
 menu_moveNode=\uC774\uB3D9 \uBC0F \uC815\uB82C
-menu_navigate=\uD0D0\uC0C9(&N)
 menu_newNode=\uC0C8\uB85C\uC6B4 \uB178\uB4DC
 menu_node=\uB178\uB4DC
 menu_node_features=\uB178\uB4DC \uC678\uD615(&U)
 menu_nodes=\uB178\uB4DC(&N)
 menu_nodeView=\uB178\uB4DC \uD45C\uC81C
-menu_notes=\uBA54\uBAA8
 menu_noteView=\uB178\uD2B8
 menu_openmaps=\uB9F5
-menu_progress=\uC9C4\uD589\uC728 \uC544\uC774\uCF58 (%)
 menu_remove_icons=\uC544\uC774\uCF58 \uC81C\uAC70
 menu_removeAttribute=\uC18D\uC131 \uC81C\uAC70
 menu_select=\uC120\uD0DD
 menu_time=\uC2DC\uAC04 \uAD00\uB9AC
 menu_title=\uB178\uB4DC \uD45C\uC81C
-menu_toolbars=\uB3C4\uAD6C \uC0C1\uC790
-menu_view=\uBCF4\uAE30(&V)
 menu_viewmode=\uBCF4\uAE30 \uBAA8\uB4DC \uC124\uC815
 MenuUtils.invalid_menuitem={0} \uC740  \uC720\uD6A8\uD55C \uBA54\uB274 \uD56D\uBAA9 \uD0A4\uAC00 \uC544\uB2D9\uB2C8\uB2E4.
 mindmap=\uB9F5
@@ -798,6 +791,7 @@ ModesMenuAction.MindMap.text=\uB9C8\uC778\uB4DC\uB9F5 \uD3B8\uC9D1\uAE30
 most_recent_files=\uCD5C\uADFC \uB9F5
 MoveToRootAction.text=\uCD5C\uC0C1\uC704 \uB178\uB4DC\uB85C \uAC00\uAE30
 NameConditionAction.text=\uC774\uB984 \uC9C0\uC815
+navigate=\uD0D0\uC0C9(&N)
 NavigationNextMapAction.text=\uB2E4\uC74C \uB9F5
 NavigationPreviousMapAction.text=\uC774\uC804 \uB9F5
 new=\uC0C8\uB85C \uB9CC\uB4E4\uAE30(&N)
@@ -867,6 +861,7 @@ normal=\uBCF4\uD1B5
 not_saved_for_image_error=\uD30C\uC77C \uC120\uD0DD\uAE30\uB97C \uD1B5\uD574 \uC774\uBBF8\uC9C0\uB97C \uC0BD\uC785\uD558\uAE30 \uC804\uC5D0 \uB9F5\uC774 \uBA3C\uC800 \uC800\uC7A5\uB418\uC5B4\uC57C \uD569\uB2C8\uB2E4
 not_saved_for_link_error=\uD30C\uC77C \uC120\uD0DD\uAE30\uB97C \uD1B5\uD574 \uB9C1\uD06C\uB97C \uC124\uC815\uD558\uAE30 \uC804\uC5D0 \uB9F5\uC774 \uBA3C\uC800 \uC800\uC7A5\uB418\uC5B4\uC57C \uD569\uB2C8\uB2E4
 note_window_location=\uB178\uD2B8 \uD328\uB110 \uC704\uCE58
+notes=\uBA54\uBAA8
 ok=\uD655\uC778(&O)
 OKAction.text=\uD655\uC778(&O)
 OnlineReference.text=\uC628\uB77C\uC778 \uCC38\uACE0\uC11C \uB9F5
@@ -1400,6 +1395,7 @@ PrintAction.text=\uB9F5 \uC778\uC1C4(&P)...
 PrintDirectAction.text=\uC778\uC1C4
 printing_settings=\uC778\uC1C4 \uBE44\uC728
 PrintPreviewAction.text=\uC778\uC1C4 \uBBF8\uB9AC\uBCF4\uAE30(&V)...
+progress=\uC9C4\uD589\uC728 \uC544\uC774\uCF58 (%)
 PropertyAction.dialog=\uD658\uACBD\uC124\uC815
 PropertyAction.text=\uD658\uACBD\uC124\uC815...
 QuickFilterAction.text=\uBE60\uB978 \uD544\uD130
@@ -1748,6 +1744,7 @@ ToggleMenubarAction.text=\uBA54\uB274 \uBCF4\uC774\uAE30/\uC228\uAE30\uAE30
 ToggleScrollbarsAction.text=\uC2A4\uD06C\uB864 \uB9C9\uB300
 ToggleStatusAction.text=\uC0C1\uD0DC \uD45C\uC2DC\uC904 \uD45C\uC2DC
 ToggleToolbarAction.text=\uB3C4\uAD6C \uC0C1\uC790 \uBCF4\uC774\uAE30/\uC228\uAE30\uAE30(&T)
+toolbars=\uB3C4\uAD6C \uC0C1\uC790
 undefined_error=\uC608\uAE30\uCE58 \uC54A\uC740 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4. \uBC84\uADF8 \uC2E0\uACE0\uB97C \uD574 \uC8FC\uC138\uC694.
 underline=\uBC11\uC904
 UnderlineAction.text=\uBC11\uC904
@@ -1788,6 +1785,7 @@ user_template_dir=\uC0AC\uC6A9\uC790 \uC11C\uC2DD
 user_zoom=\uC0AC\uC6A9\uC790 \uC815\uC758 \uD504\uB9B0\uD2B8 \uBE44\uC728 (0.0 - 2.0):
 value_format=\uAC12 \uD615\uC2DD
 version_up_to_date=\uC774\uBBF8 \uCD5C\uC2E0 \uBC84\uC804\uC744 \uC0AC\uC6A9\uD558\uACE0 \uC788\uC2B5\uB2C8\uB2E4
+view=\uBCF4\uAE30(&V)
 ViewerControllerAction.text=\uC678\uBD80 \uAC1D\uCCB4...
 ViewLayoutTypeAction.OUTLINE.text=\uAC1C\uC694 \uBCF4\uAE30
 WebDocuAction.text=\uC6F9 \uBB38\uC11C
