--- a/freeplane/resources/translations/Resources_lt.properties
+++ b/freeplane/resources/translations/Resources_lt.properties
@@ -100,12 +100,12 @@ ExportToImage.png.text=\u012E PNG...
 ExportToOoWriter.text=\u012E Open Office Writer dokument\u0105...
 ExportToOoWriter.tooltip=I\u0161skleistos at\u0161akos formuoja strukt\u016Br\u0105, suskleistos - dokumento turin\u012F.
 extension_menu=Fizinis stilius
+extras=\u012Erankiai
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=FAQ
 file=Byla
 file_already_exists=Byla {0} yra sukurta. Ar norite j\u0105 perra\u0161yti?
 file_not_found=Byla {0} nerasta
-filter=filtras
 filter_add=prid\u0117ti
 filter_and=ir
 filter_contains=turi
@@ -133,6 +133,7 @@ FoldOneLevelAction.tooltip=<html>Suskleid\u017Eia pasirinktas at\u0161akas vienu
 font=\u0160riftas
 FontFamilyAction.text=\u0161riftas
 FontSizeAction.text=\u0161rifto dydis
+format=Stilius
 format_menu_edge_styles=Kra\u0161tini\u0173 stiliai
 format_menu_edge_widths=Kra\u0161tini\u0173 plo\u010Diai
 FormatCopy.text=Kopijuoti stili\u0173
@@ -243,12 +244,7 @@ map_already_exists=Toks \u017Eem\u0117lapis jau sukurtas. Ar norite i\u0161saugo
 map_corrupted=\u017Dem\u0117lapis pa\u017Eeistas. Rodyti detales?
 map_locked_by_open=\u017Dem\u0117lapis {0} redaguojamas vartotojo {1}. Atidarau kaip read-only.
 map_locked_by_save_as=\u017Dem\u0117lapis {0} redaguojamas vartotojo {1}. ''I\u0161saugoti kaip'' sustabdoma.
-menu_extras=\u012Erankiai
-menu_file_import=Importuoti
-menu_format=Stilius
 menu_insert=\u012Eterpti
-menu_navigate=Navigacija
-menu_view=\u017Di\u016Bra
 mindmap=\u017Dem\u0117lapis
 mindmaps=\u017Dem\u0117lapiai
 mindmaps_desc=\u017Dem\u0117lapiai (*.mm)
@@ -260,6 +256,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Pastarosios bylos
 MoveToRootAction.text=Kelti \u012F \u0161akn\u012F
+navigate=Navigacija
 NavigationNextMapAction.text=Kitas \u017Eem\u0117lapis
 NavigationPreviousMapAction.text=Ankstesnis \u017Eem\u0117lapis
 new_mindmap=Naujas \u017Eem\u0117lapis
@@ -573,6 +570,7 @@ UsePlainTextAction.text=Use Plain Text[translate me]
 user_defined_zoom=Vartotojo nustatytas.
 user_defined_zoom_status_bar=Kei\u010Diu artinim\u0105 \u012F vartotojo nustatyt\u0105j\u012F: {0}%.
 user_zoom=Spausdinimo m\u0105stelis: (0.0 - 2.0):
+view=\u017Di\u016Bra
 width=Plotis
 yes=Taip
 ZoomInAction.text=Priartinti
