--- a/freeplane/resources/translations/Resources_nb.properties
+++ b/freeplane/resources/translations/Resources_nb.properties
@@ -238,12 +238,13 @@ ExportToImage.png.text=Som PNG...
 ExportToOoWriter.text=Som Open Office Writer dokument...
 ExportToOoWriter.tooltip=Utfoldede noder danner strukturen, foldede danner dokumentets innhold.
 extension_menu=Fysisk stil
+extras=Verkt\u00F8y
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=FAQ (Ofte stilte sp\u00F8rsm\u00E5l)
 file=Fil
 file_already_exists=Filen {0} finnes. Overskrive?
 file_not_found=Filen {0} finnes ikke
-filter=Filter
+filter=f&ilter
 filter_add=Legg til
 filter_and=Og
 filter_conditions=Filtere
@@ -276,6 +277,7 @@ FoldOneLevelAction.tooltip=<html>Folder inn de valgte nodene ett niv\u00E5.</htm
 font=Font
 FontFamilyAction.text=Skriftfamilie
 FontSizeAction.text=Skriftst\u00F8rrelse
+format=Format
 format_menu_edge_styles=Kantstiler
 format_menu_edge_widths=Kantbredder
 FormatCopy.text=Kopier format
@@ -379,7 +381,7 @@ IconGroupPopupAction.office.text=Kontor
 IconGroupPopupAction.smiley.text=Smil
 IconSelectionPlugin.text=Velg ikon...
 IconSelectionPlugin.tooltip=<html>Viser en popup med ikoner.</html>
-import=Importer
+import=Import
 import_linked_branch_no_link=Den valgte noden har ingen lenke for \u00E5 importere.
 ImportAction.text=Import
 ImportBranchAction.text=Importer gren\u2026
@@ -410,13 +412,7 @@ map_locked_by_save_as=Mappen {0} blir rettet av bruker {1}. Kan ikke Lagre som..
 map_not_saved=Kartet er ikke lagret fra f\u00F8r.
 menu_attributes=Atributter
 menu_copy=Kopier
-menu_extras=Verkt\u00F8y
-menu_file_import=Import
-menu_filter=f&ilter
-menu_format=Format
 menu_insert=Sett inn
-menu_navigate=Naviger
-menu_view=Vis
 mindmap=Tankekart
 mindmaps=Tankekart
 mindmaps_desc=Hjernekart (*.mm)
@@ -430,6 +426,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Sist brukte filer
 MoveToRootAction.text=Flytt til rot
+navigate=Naviger
 NavigationNextMapAction.text=Neste kart
 NavigationPreviousMapAction.text=Forrige kart
 new_map_from_user_templates.text=Nytt kart fra mal...
@@ -962,6 +959,7 @@ UsePlainTextAction.text=Bruk normal tekst
 user_defined_zoom=Brukerdefinert
 user_defined_zoom_status_bar=Endre zoom-verdien til den brukerdefinerte zoom-verdien {0}%.
 user_zoom=Utskriftens zoom-faktor (0.0 - 2.0):
+view=Vis
 WebDocuAction.text=Web-dokumentasjon
 width=Bredde
 yes=Ja
