--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -353,6 +353,7 @@ ExternalImageChangeAction.text=Wijzig afbeelding...
 ExternalImageRemoveAction.text=Verwijderen afbeelding
 ExtractLinkFromTextAction.text=Koppeling uit tekstadres
 ExtractLinkFromTextAction.tooltip=Maak snelkoppeling van adres in kern
+extras=Extra
 f_button_unassigned=<geen actie>
 FaqOpenURLAction.text=FAQ
 file=&Bestand
@@ -383,7 +384,7 @@ FileRevisionsDialog.question=Versies (Revisies) gevonden van {0}
 FileRevisionsDialog.restore=Herstellen
 FileRevisionsDialog.restore.tooltip=Vervangen {0} door {1}
 FileRevisionsDialog.title=Bestandsversies(revisies)
-filter=Filter
+filter=Filteren
 filter_add=&Toevoegen
 filter_and=&En
 filter_any_text=Kern, details of notitie
@@ -452,6 +453,7 @@ FollowLinkAction.text=Openen hyperlink
 font=Lettertype
 FontFamilyAction.text=Lettertypenaam (font)
 FontSizeAction.text=Lettertypegrootte
+format=O&pmaken
 format_invalid_pattern=Geen geldig patroon
 format_menu_cloud_shapes=Toevoegen wolk of veranderen vorm
 format_menu_edge_styles=Vorm tak
@@ -679,6 +681,7 @@ license_text=<html>Dit programma is gratis software; U kunt het opnieuw distribu
 link_error=Onjuiste koppeling "{0}" niet geopend
 link_not_available_any_more=De koppeling werkt niet meer. De knoop is ondertussen verwijderd.
 link_not_found=Koppeling {0} niet gevonden.
+links=Koppeling
 load=Laden
 load_accelerator_presets=Laden
 LoadAcceleratorPresetsAction.textPatterns.text=Sets met sneltoetsen
@@ -746,10 +749,6 @@ menu_displayAttributes=Knoopattributen
 menu_encryption=Knoopbeveiliging
 menu_error=Fout in door de gebruiker defefinieerde menustructuur {0}:\n{1}\nAborting
 menu_extensions=Knoopuitbreiding
-menu_extras=Extra
-menu_file_import=Importeren
-menu_filter=Filteren
-menu_format=O&pmaken
 menu_group=Knoopgroep
 menu_hoverView=Tooltips (zweeftekst)
 menu_iconByCategory=Pictogram per categorie...
@@ -757,26 +756,20 @@ menu_iconView=Pictogrammen
 menu_image=Afbeelding
 menu_insert=Invoegen
 menu_latex_formula=Formule tonen (LaTeX)
-menu_links=Koppeling
 menu_manageStyles=Beheren stijlen
 menu_moveNode=Verplaatsen en sorteren
-menu_navigate=Navigeren
 menu_newNode=Nieuwe knoop
 menu_node=Knoop
 menu_node_features=Knoopkenmerken
 menu_nodes=Knoop
 menu_nodeView=Knoopkern
-menu_notes=Knoopnotitie
 menu_noteView=Knoopnotitie
 menu_openmaps=Mindmap
-menu_progress=%Schijf
 menu_remove_icons=Verwijderen pictogrammen
 menu_removeAttribute=Verwijderen attribuut
 menu_select=Selecteren
 menu_time=Agenda
 menu_title=Knoopkern
-menu_toolbars=Werkbalken
-menu_view=Beel&d
 menu_viewmode=Beeldinstelling
 MenuUtils.invalid_menuitem={0} is geen geldige menu-elementsleutel.
 mindmap=Mindmap
@@ -798,6 +791,7 @@ ModesMenuAction.MindMap.text=Mindmapbewerker
 most_recent_files=&Onlangs geopend
 MoveToRootAction.text=Naar stamknoop
 NameConditionAction.text=Naam toekennen
+navigate=Navigeren
 NavigationNextMapAction.text=Volgende mindmap
 NavigationPreviousMapAction.text=Vorige mindmap
 new=&Nieuw
@@ -867,6 +861,7 @@ normal=Normaal
 not_saved_for_image_error=De mindmap moet opgeslagen worden voordat je een afbeelding kunt toevoegen met  de bestandskiezer of via een hyperlink
 not_saved_for_link_error=De mindmap moet zijn voor je met de bestandskiezer een hyperlink kunt toevoegen
 note_window_location=Positie notitiehulpvenster
+notes=Knoopnotitie
 ok=OK
 OKAction.text=&OK
 OnlineReference.text=Online documentatiemindmaps
@@ -1401,6 +1396,7 @@ PrintAction.text=Afdrukken mindmap...
 PrintDirectAction.text=Afdrukken
 printing_settings=Pagina-afdrukinstellingen
 PrintPreviewAction.text=&Afdrukvoorbeeld...
+progress=%Schijf
 PropertyAction.dialog=Instellingen
 PropertyAction.text=Instellingen...
 QuickFilterAction.text=Filteren mindmap
@@ -1748,6 +1744,7 @@ ToggleMenubarAction.text=Tonen hoofdmenu
 ToggleScrollbarsAction.text=Schuifbalken
 ToggleStatusAction.text=Tonen statuslijn
 ToggleToolbarAction.text=Tonen werkmenu
+toolbars=Werkbalken
 undefined_error=Er is een onverwachte fout opgetreden. Probeer er een foutmelding van te maken.
 underline=Onderstreept
 UnderlineAction.text=Onderstrepen
@@ -1786,6 +1783,7 @@ user_template_dir=Door de gebruiker gedefinieerde mindmapstijlen
 user_zoom=Zoomfactor (0.0 - 2.0) voor afdrukken:
 value_format=Waardeformaat
 version_up_to_date=Je gebruikt al de meest recente versie
+view=Beel&d
 ViewerControllerAction.text=Schaalbare afbeelding...
 ViewLayoutTypeAction.OUTLINE.text=Tonen overzichtsweergave
 WebDocuAction.text=Web Documentatie
