--- a/freeplane/resources/translations/Resources_nn.properties
+++ b/freeplane/resources/translations/Resources_nn.properties
@@ -105,12 +105,13 @@ ExportToImage.png.text=Som PNG ...
 ExportToOoWriter.text=Som Open Office Writer-dokument ...
 ExportToOoWriter.tooltip=Samanbretta noder viser strukturen, utbretta noder viser innhaldet i dokumentet.
 extension_menu=Fysisk stil
+extras=Verkt\u00F8y
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=SOS - Sp\u00F8rsm\u00E5l og svar (FAQ)
 file=Fil
 file_already_exists=Fila {0} finst allereie. Vil du skriva over ho?
 file_not_found=Fann ikkje fila {0}
-filter=filter
+filter=Filter[translate me]
 filter_add=legg til
 filter_and=og
 filter_contains=inneheld
@@ -138,6 +139,7 @@ FoldOneLevelAction.tooltip=<html>Bretter saman dei valde nodane med eitt niv\u00
 font=Skrifttype
 FontFamilyAction.text=skrifttypefamilie
 FontSizeAction.text=skriftstorleik
+format=Format
 format_menu_edge_styles=Linjestilar
 format_menu_edge_widths=Linjebreidder
 FormatCopy.text=Kopiformat
@@ -224,7 +226,7 @@ IconGroupPopupAction.office.text=Office[translate me]
 IconGroupPopupAction.smiley.text=Smiley[translate me]
 IconSelectionPlugin.text=Vel ikon ...
 IconSelectionPlugin.tooltip=<html>Her kan du bruka eit undervindauge til \u00E5 velja eit ikon.</html>
-import=Importer
+import=Import
 import_linked_branch_no_link=Den valde noden har ingen peikar \u00E5 importera fr\u00E5.
 ImportAction.text=Import[translate me]
 ImportBranchAction.text=Grein ...
@@ -250,13 +252,7 @@ map_already_exists=Kartet finst allereie. Vil du skriva over det?
 map_corrupted=\u00D8ydelagt kart. Vil du sj\u00E5 detaljar?
 map_locked_by_open=Kartet {0} blir brukt av brukaren {1}. Blir opna som skrivebeskytta.
 map_locked_by_save_as=Kartet {0} blir brukt av brukaren {1}. Handlinga "Lagra som" avbroten.
-menu_extras=Verkt\u00F8y
-menu_file_import=Import
-menu_filter=Filter[translate me]
-menu_format=Format
 menu_insert=Set inn
-menu_navigate=Navigasjon
-menu_view=Vising
 mindmap=Kart
 mindmaps=Kart
 mindmaps_desc=Kart (*.mm)
@@ -270,6 +266,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Siste filer
 MoveToRootAction.text=Flytt til rot
+navigate=Navigasjon
 NavigationNextMapAction.text=Nytt kart
 NavigationPreviousMapAction.text=Tidlegare kart
 new_mindmap=Nytt tankekart
@@ -584,6 +581,7 @@ url_load_error=Klarte ikkje \u00E5 lasta kartet fr\u00E5 adressa:
 user_defined_zoom=Brukarstyrt.
 user_defined_zoom_status_bar=Endrar skaleringa til den brukarstyrte verdien {0}%.
 user_zoom=Skaleringsfaktor for utskrift (0.0 - 2.0):
+view=Vising
 width=Breidd
 yes=Ja
 ZoomInAction.text=Gjer st\u00F8rre
