--- a/freeplane/resources/translations/Resources_pl.properties
+++ b/freeplane/resources/translations/Resources_pl.properties
@@ -339,6 +339,7 @@ ExternalImageChangeAction.text=Zmie\u0144 obrazek...
 ExternalImageRemoveAction.text=Usu\u0144 obrazek
 ExtractLinkFromTextAction.text=Odno\u015Bnik z tekstu w\u0119z\u0142a
 ExtractLinkFromTextAction.tooltip=Tworzy odno\u015Bnik na podstawie adresu w tek\u015Bcie w\u0119z\u0142a
+extras=Narz\u0119dzia
 f_button_unassigned=<brak>
 FaqOpenURLAction.text=FAQ
 file=Plik
@@ -434,6 +435,7 @@ FollowLinkAction.text=Otw\u00F3rz odno\u015Bnik
 font=Czcionka
 FontFamilyAction.text=Czcionka
 FontSizeAction.text=Rozmiar
+format=Format
 format_invalid_pattern=Nieprawid\u0142owy wzorzec
 format_menu_cloud_shapes=Dodaj chmurk\u0119 lub zmie\u0144 jej styl
 format_menu_edge_styles=Styl ga\u0142\u0119zi
@@ -644,6 +646,7 @@ LicenseAction.text=Licencja
 link_error=Nieprawid\u0142owy odno\u015Bnik "{0}" nie za\u0142adowany
 link_not_available_any_more=Po\u0142\u0105czenie jest nieaktualne. Jeden z w\u0119z\u0142\u00F3w zosta\u0142 usuni\u0119ty.
 link_not_found=Nie znaleziono odno\u015Bnika {0}.
+links=Odno\u015Bnik
 load=Wczytywanie
 LoadAcceleratorPresetsAction.textPatterns.text=Wzorce tekstowe
 locking_failed_by_open=Zablokowanie mindmapy {0} niemo\u017Cliwe. Otwieram tylko do odczytu.
@@ -705,10 +708,6 @@ menu_displayAttributes=Atrybuty w\u0119z\u0142a
 menu_encryption=Ochrona has\u0142em
 menu_error=B\u0142\u0105d w zdefiniowanej przez u\u017Cytkownika strukturze menu {0}:\n{1}\nPrzerwane
 menu_extensions=Rozszerzenia w\u0119z\u0142a
-menu_extras=Narz\u0119dzia
-menu_file_import=Import
-menu_filter=Filtr
-menu_format=Format
 menu_group=Grupa w\u0119z\u0142\u00F3w
 menu_hoverView=Podpowiedzi
 menu_iconByCategory=Wybierz ikon\u0119 (kategorie)
@@ -716,25 +715,19 @@ menu_iconView=Ikony
 menu_image=Obrazek
 menu_insert=Wstaw
 menu_latex_formula=Formu\u0142a LaTeX-u
-menu_links=Odno\u015Bnik
 menu_manageStyles=Zarz\u0105dzaj stylami
 menu_moveNode=Przemieszczanie i sortowanie
-menu_navigate=Nawigacja
 menu_newNode=Nowy w\u0119ze\u0142
 menu_node=W\u0119ze\u0142
 menu_node_features=W\u0142a\u015Bciwo\u015Bci w\u0119z\u0142a
 menu_nodes=W\u0119z\u0142y
 menu_nodeView=Tekst w\u0119z\u0142a
-menu_notes=Notatka
 menu_noteView=Notatki
-menu_progress=Ikona post\u0119pu (%)
 menu_remove_icons=Usu\u0144 ikony
 menu_removeAttribute=Usu\u0144 atrybut
 menu_select=Zaznacz
 menu_time=Zarz\u0105dzanie czasem
 menu_title=Tekst w\u0119z\u0142a
-menu_toolbars=Paski narz\u0119dzi
-menu_view=Widok
 MenuUtils.invalid_menuitem={0} nie jest prawid\u0142owym kluczem (key) elementu menu.
 mindmap=Mapa
 MindMapNodesFlavorHandler=Hierarchia w\u0119z\u0142\u00F3w
@@ -755,6 +748,7 @@ ModesMenuAction.MindMap.text=Edytor mapy
 most_recent_files=Ostatnio otwierane
 MoveToRootAction.text=Przejd\u017A do korzenia
 NameConditionAction.text=Ustaw nazw\u0119
+navigate=Nawigacja
 NavigationNextMapAction.text=Nast\u0119pna mapa
 NavigationPreviousMapAction.text=Poprzednia mapa
 new=Nowa mapa
@@ -823,6 +817,7 @@ normal=Zwyk\u0142y
 not_saved_for_image_error=Mapa musi by\u0107 zapisana zanim b\u0119dziesz m\u00F3g\u0142 wstawi\u0107 obrazek z okna wyboru pliku
 not_saved_for_link_error=Mindmapa musi zosta\u0107 zapisana przed wybraniem odno\u015Bnika do pliku.
 note_window_location=Po\u0142o\u017Cenie okna notatnika
+notes=Notatka
 ok=OK
 OKAction.text=OK
 OnlineReference.text=Dokumentacja mapy online
@@ -1306,6 +1301,7 @@ PrintAction.text=Drukuj...
 PrintDirectAction.text=Drukuj
 printing_settings=Ustawienia drukowania
 PrintPreviewAction.text=Podgl\u0105d wydruku...
+progress=Ikona post\u0119pu (%)
 PropertyAction.dialog=Preferencje
 PropertyAction.text=Preferencje...
 QuickFilterAction.text=Szybki filtr
@@ -1636,6 +1632,7 @@ ToggleLeftToolbarAction.text=Pasek ikon
 ToggleMenubarAction.text=W\u0142\u0105cz/wy\u0142\u0105cz menu
 ToggleStatusAction.text=Wiersz statusu
 ToggleToolbarAction.text=Pasek narz\u0119dzi
+toolbars=Paski narz\u0119dzi
 undefined_error=Nieoczekiwany b\u0142\u0105d. Prosz\u0119 prze\u015Blij o nim wiadomo\u015B\u0107.
 underline=Podkre\u015Blenie
 UnderlineAction.text=Podkre\u015Blenie
@@ -1664,6 +1661,7 @@ user_icon=Ikona u\u017Cytkownika "{0}"
 user_template_dir=Szablony u\u017Cytkownika
 user_zoom=Powi\u0119kszenie wydruku (0.0 - 2.0):
 version_up_to_date=Ju\u017C u\u017Cywasz najnowszej wersji programu
+view=Widok
 ViewerControllerAction.text=Obiekt zewn\u0119trzny...
 ViewLayoutTypeAction.OUTLINE.text=Widok konspektu
 WebDocuAction.text=Dokumentacja webowa
