--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -354,6 +354,7 @@ ExternalImageChangeAction.text=Mudar imagem...
 ExternalImageRemoveAction.text=Remover imagem
 ExtractLinkFromTextAction.text=Converter link de dentro de texto
 ExtractLinkFromTextAction.tooltip=Definir hiperlink de um endere\u00E7o dentro do texto do n\u00F3
+extras=&Ferramentas
 f_button_unassigned=<Sem a\u00E7\u00E3o>
 FaqOpenURLAction.text=Perguntas feitas frequentemente
 file=&Arquivo
@@ -384,7 +385,7 @@ FileRevisionsDialog.question=Revis\u00F5es encontradas de {0}
 FileRevisionsDialog.restore=Restaurar
 FileRevisionsDialog.restore.tooltip=Trocar {0} por {1}
 FileRevisionsDialog.title=Revis\u00F5es do arquivo
-filter=Filtrar
+filter=&Fitrar
 filter_add=Adicionar
 filter_and=E
 filter_any_text=Principal, detalhes ou nota
@@ -453,6 +454,7 @@ FollowLinkAction.text=Seguir link
 font=Fonte
 FontFamilyAction.text=fam\u00EDlia da fonte
 FontSizeAction.text=tamanho da fonte
+format=&Formatar
 format_invalid_pattern=N\u00E3o \u00E9 um padr\u00E3o v\u00E1lido
 format_menu_cloud_shapes=Adicionar nuvem ou mudar estilo
 format_menu_edge_styles=&Estilos de borda
@@ -646,7 +648,7 @@ IconSelectionPlugin.text=Selecionar \u00EDcone...
 IconSelectionPlugin.tooltip=<html>Aqui voc\u00EA pode selecionar um \u00EDcone usando uma janela.</html>
 image_covertLink=Converte link em imagem
 ImageFlavorHandler=Imagem (use arquivo separado)
-import=Importar
+import=&Importar
 import_linked_branch_no_link=O n\u00F3 selecionado n\u00E3o tem nenhum link para ser importado.
 ImportAction.text=Importar
 ImportBranchAction.text=Galho...
@@ -680,6 +682,7 @@ license_text=<html>Esse programa \u00E9 um software livre; voc\u00EA pode redist
 link_error=Link incorreto "{0}" n\u00E3o carregada
 link_not_available_any_more=O link n\u00E3o \u00E9 mais v\u00E1lido. Um dos n\u00F3s foi apagado.
 link_not_found=Link {0} n\u00E3o encontrado.
+links=Link
 load=&Carregar
 load_accelerator_presets=Carregar
 LoadAcceleratorPresetsAction.textPatterns.text=Padr\u00F5es de texto
@@ -747,10 +750,6 @@ menu_displayAttributes=Atributos do n\u00F3
 menu_encryption=Prote\u00E7\u00E3o por palavra chave
 menu_error=Erro na estrutura de menu definida pelo usu\u00E1rio {0}.\n{1}\nAbortando
 menu_extensions=Extens\u00F5es do n\u00F3
-menu_extras=&Ferramentas
-menu_file_import=&Importar
-menu_filter=&Fitrar
-menu_format=&Formatar
 menu_group=Grupo do n\u00F3
 menu_hoverView=Dicas de ferramenta
 menu_iconByCategory=\u00CDcone por categoria...
@@ -758,26 +757,20 @@ menu_iconView=\u00CDcones
 menu_image=Imagem
 menu_insert=&Inserir
 menu_latex_formula=F\u00F3rmula LaTeX
-menu_links=Link
 menu_manageStyles=&Gerenciar estilos
 menu_moveNode=Mover e organizar
-menu_navigate=&Navegar
 menu_newNode=Novo n\u00F3
 menu_node=N\u00F3
 menu_node_features=Caracter\u00EDsticas do n\u00F3
 menu_nodes=&N\u00F3
 menu_nodeView=N\u00FAcleo do n\u00F3
-menu_notes=Anota\u00E7\u00E3o
 menu_noteView=Anota\u00E7\u00F5es
 menu_openmaps=Mapas
-menu_progress=\u00CDcone de Andamento (%)
 menu_remove_icons=Remover \u00EDcones
 menu_removeAttribute=Remover atributo
 menu_select=Selecionar
 menu_time=Gerenciamento de tempo
 menu_title=N\u00FAcleo do n\u00F3
-menu_toolbars=Barras de ferramentas
-menu_view=Visualizar
 menu_viewmode=Defini\u00E7\u00F5es de vizualiza\u00E7\u00E3o
 MenuUtils.invalid_menuitem={0} n\u00E3o \u00E9 uma tecla de item de menu v\u00E1lida.
 mindmap=Mapa
@@ -799,6 +792,7 @@ ModesMenuAction.MindMap.text=Editor de mapa mental
 most_recent_files=Arquivos mais recentes
 MoveToRootAction.text=Mover para raiz
 NameConditionAction.text=Defina o nome
+navigate=&Navegar
 NavigationNextMapAction.text=Pr\u00F3ximo mapa
 NavigationPreviousMapAction.text=Mapa anterior
 new=&Novo
@@ -868,6 +862,7 @@ normal=Normal
 not_saved_for_image_error=O mapa deve ser salvo antes que voc\u00EA possa escolher uma imagem por meio do seletor de arquivo
 not_saved_for_link_error=O mapa precisa ser salvo antes que voc\u00EA possa setar uma refer\u00EAncia pelo seletor de arquivos
 note_window_location=posi\u00E7\u00E3o do painel de anota\u00E7\u00F5es
+notes=Anota\u00E7\u00E3o
 ok=OK
 OKAction.text=OK
 OnlineReference.text=mapas da documenta\u00E7\u00E3o online
@@ -1402,6 +1397,7 @@ PrintAction.text=Imprimir...
 PrintDirectAction.text=Imprimir
 printing_settings=Escala de impress\u00E3o
 PrintPreviewAction.text=Imprimir preview...
+progress=\u00CDcone de Andamento (%)
 PropertyAction.dialog=Prefer\u00EAncias
 PropertyAction.text=Prefer\u00EAncias ...
 QuickFilterAction.text=Filtro r\u00E1pido
@@ -1749,6 +1745,7 @@ ToggleMenubarAction.text=Ativar barra de menis
 ToggleScrollbarsAction.text=Barra de rolagem
 ToggleStatusAction.text=Exibir linha de status
 ToggleToolbarAction.text=Ativar barra de ferramentas
+toolbars=Barras de ferramentas
 undefined_error=Um erro inesperado ocorreu. Por favor tente reportar um erro.
 underline=Sublinhado
 UnderlineAction.text=Sublinhado
@@ -1789,6 +1786,7 @@ user_template_dir=Modelos de usu\u00E1rio
 user_zoom=Fator de amplia\u00E7\u00E3o da impress\u00E3o (0.0 - 2.0):
 value_format=Formato de valor
 version_up_to_date=Voc\u00EA j\u00E1 est\u00E1 usando a \u00FAltima vers\u00E3o
+view=Visualizar
 ViewerControllerAction.text=Objeto externo...
 ViewLayoutTypeAction.OUTLINE.text=Visualizar estrutura de t\u00F3picos
 WebDocuAction.text=Documenta\u00E7\u00E3o na internet
