--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -372,7 +372,7 @@ ExternalImageChangeAction.text=Alterar imagem...
 ExternalImageRemoveAction.text=Eliminar imagem
 ExtractLinkFromTextAction.text=Converter texto em hiperliga\u00E7\u00E3o
 ExtractLinkFromTextAction.tooltip=Criar uma hiperliga\u00E7\u00E3o a partir do texto mostrado no n\u00F3
-extras=Extras
+extras=&Ferramentas
 f_button_unassigned=<nenhuma a\u00E7\u00E3o>
 FaqOpenURLAction.text=FAQ
 file=&Ficheiro
@@ -403,7 +403,7 @@ FileRevisionsDialog.question=Encontradas revis\u00F5es de {0}
 FileRevisionsDialog.restore=Resta&urar
 FileRevisionsDialog.restore.tooltip=Substituir {0} por {1}
 FileRevisionsDialog.title=Revis\u00F5es do ficheiro
-filter=Filtro
+filter=F&iltrar
 filter_add=&Adicionar
 filter_and=E
 filter_any_text=N\u00FAcleo, detalhes ou nota
@@ -479,7 +479,7 @@ FollowLinkAction.text=Seguir liga\u00E7\u00E3o
 font=Tipo de letra
 FontFamilyAction.text=Fam\u00EDlia da letra
 FontSizeAction.text=Tamanho da letra
-format=Formatar
+format=F&ormatar
 format_invalid_pattern=Padr\u00E3o inv\u00E1lido
 format_menu_cloud_shapes=Adicionar cor ou alterar estilo
 format_menu_edge_styles=&Estilo das linhas
@@ -675,7 +675,7 @@ IconSelectionPlugin.text=Selecionar \u00EDcone da tabela...
 IconSelectionPlugin.tooltip=<html>Aqui pode selecionar um \u00EDcone usando uma subjanela.</html>
 image_covertLink=Converter liga\u00E7\u00E3o em imagem
 ImageFlavorHandler=Imagem (usar ficheiro separado)
-import=Importar
+import=I&mportar
 import_linked_branch_no_link=O n\u00F3 selecionado n\u00E3o tem liga\u00E7\u00F5es para importar.
 ImportAction.text=&Importar mapa
 ImportBranchAction.text=&Ramo...
@@ -715,7 +715,7 @@ license_text=<html>Este programa \u00E9 gratuito; pode redistribui-lo e/ou<br>mo
 link_error=Liga\u00E7\u00E3o incorreta, {0} n\u00E3o carregado
 link_not_available_any_more=A liga\u00E7\u00E3o j\u00E1 n\u00E3o \u00E9 v\u00E1lida. O n\u00F3 foi eliminado no meio tempo.
 link_not_found=Liga\u00E7\u00E3o {0} n\u00E3o encontrada.
-links=Liga\u00E7\u00F5es
+links=Liga\u00E7\u00E3o
 load=&Carregar
 load_accelerator_presets=Carregar
 LoadAcceleratorPresetsAction.textPatterns.text=Padr\u00F5es de texto
@@ -789,10 +789,6 @@ menu_displayAttributes=Atributos do n\u00F3
 menu_encryption=Prote\u00E7\u00E3o por palavra-passe
 menu_error=Erro na estrutura do menu definido pelo utilizador {0}:\n{1}\nA cancelar
 menu_extensions=Extens\u00F5es do n\u00F3
-menu_extras=&Ferramentas
-menu_file_import=I&mportar
-menu_filter=F&iltrar
-menu_format=F&ormatar
 menu_group=Grupo de n\u00F3s
 menu_hoverView=Sugest\u00F5es
 menu_iconByCategory=\u00CDcone por categoria...
@@ -800,26 +796,20 @@ menu_iconView=\u00CDcones
 menu_image=Imagem
 menu_insert=In&serir
 menu_latex_formula=F\u00F3rmula LaTex
-menu_links=Liga\u00E7\u00E3o
 menu_manageStyles=&Gerir estilos
 menu_moveNode=Mover e ordenar
-menu_navigate=&Navegar
 menu_newNode=Novo n\u00F3
 menu_node=N\u00F3
 menu_node_features=Funcionalidades do n\u00F3
 menu_nodes=&N\u00F3s
 menu_nodeView=N\u00FAcleo do n\u00F3
-menu_notes=Nota
 menu_noteView=Notas
 menu_openmaps=Mapas
-menu_progress=\u00CDcone de progresso (%)
 menu_remove_icons=Remover \u00EDcones
 menu_removeAttribute=Remover atributo
 menu_select=Selecionar
 menu_time=Gest\u00E3o de tempo
 menu_title=N\u00FAcleo do n\u00F3
-menu_toolbars=Barras de ferramentas
-menu_view=&Ver
 menu_viewmode=Ver defini\u00E7\u00F5es
 MenuUtils.invalid_menuitem={0} n\u00E3o \u00E9 um atalho de menu v\u00E1lido.
 mindmap=Mapa
@@ -842,7 +832,7 @@ most_recent_files=Ficheiros recentes
 MoveAction.text=Mover
 MoveToRootAction.text=Ir para a ra\u00EDz
 NameConditionAction.text=Definir nome
-navigate=Navegar
+navigate=&Navegar
 NavigationNextMapAction.text=Mapa seguinte
 NavigationPreviousMapAction.text=Mapa anterior
 new=&Novo
@@ -919,7 +909,7 @@ normal=Normal
 not_saved_for_image_error=O mapa tem de ser gravado antes de definir uma imagem com o seletor de ficheiros
 not_saved_for_link_error=O mapa tem que ser gravado antes de definir uma liga\u00E7\u00E3o com o seletor de ficheiros
 note_window_location=Posi\u00E7\u00E3o da janela de notas
-notes=Notas
+notes=Nota
 ok=Aceitar
 OKAction.text=Aceitar
 OnlineReference.text=Mapas de documenta\u00E7\u00E3o online
@@ -1210,7 +1200,7 @@ OptionPanel.ROUND_RECT=Ret\u00E2ngulo arredondado
 OptionPanel.ru=Russo / \u0420\u0443\u0441\u0441\u043A\u0438\u0439
 OptionPanel.save_folding=Gravar dobragem
 OptionPanel.save_folding_if_map_is_changed=Se o mapa est\u00E1 alterado
-OptionPanel.save_last_visited_node==Gravar \u00FAltima posi\u00E7\u00E3o no mapa
+OptionPanel.save_last_visited_node=Gravar \u00FAltima posi\u00E7\u00E3o no mapa
 OptionPanel.save_modification_times=Gravar hora das altera\u00E7\u00F5es
 OptionPanel.script_classpath=Caminho de classe de scripts: pastas adicionais contendo classes e/ou JARs (ver sugest\u00E3o)
 OptionPanel.script_classpath.tooltip=<html>Uma lista de JARs e/ou pastas para adicionar ao caminho de classes de scripts e f\u00F3rmulas.<br>Use ; (Windows) ou : (Linux, Mac) para separar entradas.<br>V\u00E3o ser procurados ficheiros JARs e .class nas pastas.<br>Caminhos que n\u00E3o sejam absolutos ser\u00E3o considerados relativos \u00E0 pasta de instala\u00E7\u00E3o do Freeplane.<br>Se definir este caminho, tamb\u00E9m tem de permitir acesso de leitura!</html>
@@ -1482,7 +1472,7 @@ PrintAction.text=Im&primir mapa...
 PrintDirectAction.text=Imprimir
 printing_settings=Escala de impress\u00E3o
 PrintPreviewAction.text=Pr\u00E9-visualizar impress\u00E3o...
-progress=Progresso
+progress=\u00CDcone de progresso (%)
 PropertyAction.dialog=Prefer\u00EAncias
 PropertyAction.text=Prefer\u00EAncias...
 QuickFilterAction.text=Filtro r\u00E1pido
@@ -1508,6 +1498,8 @@ ReminderHookAction.text=Remover lembrete
 ReminderHookAction.tooltip=Remove o lembrete de um n\u00F3.
 remove_file_from_list_on_error=O ficheiro {0} n\u00E3o foi aberto. Quer remov\u00EA-lo da lista de ficheiros recentes?
 remove_shortcut_question=Substituir atalho?
+RemoveAllAlwaysUnfoldedNodeFlagsAction.text=Repor n\u00F3s desdobrados
+RemoveAllAlwaysUnfoldedNodeFlagsAction.tooltip=Permite dobrar todos os n\u00F3s
 RemoveAllIconsAction.text=Eliminar todos os \u00EDcones
 RemoveConnectorAction.text=Eliminar conector
 RemoveEncryption.text=Remover palavra-passe
@@ -1576,6 +1568,8 @@ set_accelerator_on_next_click_action=Para criar um novo atalho de teclado: prima
 SetAccelerator.dialogTitle=Atribui\u00E7\u00E3o de atalhos
 SetAccelerator.keystrokeDetected=A chave {0} n\u00E3o est\u00E1 atribu\u00EDda a nenhum item de menu.
 SetAcceleratorOnNextClickAction.text=Atribuir atalho...
+SetAlwaysUnfoldedNodeFlagsAction.text=Manter n\u00F3s desdobrados
+SetAlwaysUnfoldedNodeFlagsAction.tooltip=Impedir dobras nos n\u00F3s atualmente desdobrados
 SetImageByFileChooserAction.text=Imagem por escolha ou liga\u00E7\u00E3o...
 SetLinkAnchorAction.text=Definir \u00E2ncora da liga\u00E7\u00E3o
 SetLinkAnchorAction.tooltip=<html>definir o n\u00F3 selecionado como \u00E2ncora para cria\u00E7\u00E3o<br/>futura de liga\u00E7\u00F5es locais ou globais.
@@ -1887,7 +1881,7 @@ user_zoom=Amplia\u00E7\u00E3o para impress\u00E3o(0.0 - 2.0):
 userScripts=Scripts
 value_format=Formato do valor
 version_up_to_date=J\u00E1 tem a mais recente vers\u00E3o do programa
-view=Ver
+view=&Ver
 ViewerControllerAction.text=Objeto externo...
 ViewLayoutTypeAction.OUTLINE.text=Vista de destaque
 web_resources=Recursos web
