--- a/freeplane/resources/translations/Resources_sk.properties
+++ b/freeplane/resources/translations/Resources_sk.properties
@@ -150,12 +150,13 @@ ExportToImage.png.text=Ako PNG...
 ExportToOoWriter.text=Ako dokument programu OpenOffice Writer...
 ExportToOoWriter.tooltip=Rozbalen\u00E9 uzly tvoria \u0161trukt\u00FAru, zbalen\u00E9 uzly tvoria obsah dokumentu.
 extension_menu=Fyzick\u00FD \u0161t\u00FDl
+extras=N\u00E1stroje
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=Ot\u00E1zky
 file=S\u00FAbor
 file_already_exists=S\u00FAbor {0} u\u017E existuje. Chcete ho prep\u00EDsa\u0165?
 file_not_found=S\u00FAbor {0} sa nena\u0161iel
-filter=Filter
+filter=Filter[translate me]
 filter_add=Pridaj
 filter_and=A
 filter_conditions=Filtre
@@ -190,6 +191,7 @@ FollowLinkAction.text=Otvor hyperlinku:
 font=P\u00EDsmo
 FontFamilyAction.text=typ p\u00EDsma
 FontSizeAction.text=ve\u013Ekos\u0165 p\u00EDsma
+format=Form\u00E1t
 format_menu_edge_styles=\u0160t\u00FDly hr\u00E1n
 format_menu_edge_widths=Hr\u00FAbky hr\u00E1n
 FormatCopy.text=Kop\u00EDruj form\u00E1t
@@ -295,7 +297,7 @@ IconGroupPopupAction.docs_folders.text=Docs & Folders[translate me]
 IconGroupPopupAction.smiley.text=Smiley[translate me]
 IconSelectionPlugin.text=Vyber ikonu...
 IconSelectionPlugin.tooltip=<html>Tu m\u00F4\u017Eete vybra\u0165 ikonu pomocou podokna.</html>
-import=Import
+import=Importuj
 import_linked_branch_no_link=Ozna\u010Den\u00FD uzol nem\u00E1 linku, z ktorej by sa dalo importova\u0165.
 ImportAction.text=Importuj
 ImportBranchAction.text=Vetva...
@@ -324,13 +326,7 @@ map_locked_by_open=Mapu {0} u\u017E edituje pou\u017E\u00EDvate\u013E {1}. Otv\u
 map_locked_by_save_as=Mapu {0} edituje pou\u017E\u00EDvate\u013E {1}. Akcia Ulo\u017E ako zru\u0161en\u00E1.
 map_not_saved=T\u00E1to mapa e\u0161te nebola ulo\u017Een\u00E1.
 menu_attributes=Vlastnosti
-menu_extras=N\u00E1stroje
-menu_file_import=Importuj
-menu_filter=Filter[translate me]
-menu_format=Form\u00E1t
 menu_insert=Vlo\u017E
-menu_navigate=Naviguj
-menu_view=Poh\u013Ead
 mindmap=Mapa
 mindmaps=Mapy
 mindmaps_desc=Mapy (*.mm)
@@ -341,6 +337,7 @@ modes=Re\u017Eimy
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Naposledy pou\u017Eit\u00E9 s\u00FAbory
 MoveToRootAction.text=Presu\u0148 na kore\u0148
+navigate=Naviguj
 NavigationNextMapAction.text=\u010Eal\u0161ia mapa
 NavigationPreviousMapAction.text=Predch\u00E1dzaj\u00FAca mapa
 new_mindmap=Nov\u00E1 mapa my\u0161lienok
@@ -703,6 +700,7 @@ UsePlainTextAction.text=Pou\u017Ei \u010Dist\u00FD text
 user_defined_zoom=Zadan\u00FD u\u017E\u00EDvate\u013Eom.
 user_defined_zoom_status_bar=Men\u00EDm zaostrenie na hodnotu zadan\u00FA u\u017E\u00EDvate\u013Eom: {0}%.
 user_zoom=Zadajte koeficient zaostrenia (0.0 - 2.0):
+view=Poh\u013Ead
 width=\u0160\u00EDrka
 yes=\u00C1no
 ZoomInAction.text=Zv\u00E4\u010D\u0161i zaostrenie
