--- a/freeplane/resources/translations/Resources_sl.properties
+++ b/freeplane/resources/translations/Resources_sl.properties
@@ -167,12 +167,13 @@ ExportToImage.png.text=Kot PNG ...
 ExportToOoWriter.text=Kot dokument OpenOffice.org Writer ...
 ExportToOoWriter.tooltip=Neprepognjena vozli\u0161\u010Da oblikujejo strukturo, prepognjena vozli\u0161\u010Da pa vsebino dokumenta.
 extension_menu=Fizi\u010Dni slog
+extras=Orodja
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=Pogosto zastavljena vpra\u0161anja (FAQ)
 file=Datoteka
 file_already_exists=Datoteka {0} \u017Ee obstaja. Jo \u017Eelite prepisati?
 file_not_found=Datoteke {0} ni mo\u010D najti
-filter=filter
+filter=Filter[translate me]
 filter_add=dodaj
 filter_and=in
 filter_conditions=Filtri
@@ -207,6 +208,7 @@ FollowLinkAction.text=Follow Link[translate me]
 font=Pisava
 FontFamilyAction.text=dru\u017Eina pisav
 FontSizeAction.text=velikost pisave
+format=Oblika
 format_menu_edge_styles=Slogi robov
 format_menu_edge_widths=\u0160irine robov
 FormatCopy.text=Kopiraj obliko
@@ -353,13 +355,7 @@ map_locked_by_open=Miselni vzorec {0} je \u017Ee urejevan s strani uporabnika {1
 map_locked_by_save_as=Miselni vzorec {0} je \u017Ee urejevan s strani uporabnika {1}. Akcija Shrani kot je prekinjena.
 map_not_saved=Miselni vzorec prej ni bil shranjen.
 menu_attributes=Atributi
-menu_extras=Orodja
-menu_file_import=Uvozi
-menu_filter=Filter[translate me]
-menu_format=Oblika
 menu_insert=Vstavi
-menu_navigate=Krmar
-menu_view=Pogled
 mindmap=Miselni vzorec
 mindmaps=Miselni vzorci
 mindmaps_desc=Miselni vzorci (*.mm)
@@ -376,6 +372,7 @@ ModesMenuAction.File.text=File Explorer[translate me]
 ModesMenuAction.MindMap.text=Mind Map Editor[translate me]
 most_recent_files=Zadnje odprte datoteke
 MoveToRootAction.text=Premakni k korenskemu vozli\u0161\u010Du
+navigate=Krmar
 NavigationNextMapAction.text=Naslednji vzorec
 NavigationPreviousMapAction.text=Prej\u0161nji vzorec
 new_mindmap=Nov miselni vzorec
@@ -962,6 +959,7 @@ UsePlainTextAction.text=Uporabi navadno besedilo
 user_defined_zoom=Uporabni\u0161ko dolo\u010Deno.
 user_defined_zoom_status_bar=Spreminjanje pogleda na uporabni\u0161ko dolo\u010Deno vrednost {0}%.
 user_zoom=Faktor pove\u010Dave tiskanja (0.0 - 2.0):
+view=Pogled
 WebDocuAction.text=Spletna dokumentacija
 width=\u0160irina
 yes=Da
