--- a/freeplane/resources/translations/Resources_sv.properties
+++ b/freeplane/resources/translations/Resources_sv.properties
@@ -237,13 +237,14 @@ ExportToOoWriter.text=Som Open Office Writer dokument...
 extension_menu=Mallar
 ExtractLinkFromTextAction.text=Ny hyperl\u00E4nk fr\u00E5n grentext
 ExtractLinkFromTextAction.tooltip=Skapar en l\u00E4nk om text liknande hyperl\u00E4nk finns i grentexten
+extras=Verk&tyg
 f_button_unassigned=<inget>
 FaqOpenURLAction.text=FAQ
 file=Arkiv
 file_already_exists=Filen {0} finns redan. Skriv \u00F6ver filen?
 file_not_found=Filen {0} hittades inte
 FileListFlavorHandler=L\u00E4nkar till filer
-filter=Filtrera
+filter=F&ilter
 filter_add=L\u00E4gg till
 filter_and=Och
 filter_conditions=Filter
@@ -301,6 +302,7 @@ FollowLinkAction.text=\u00D6ppna hyperl\u00E4nk:
 font=Teckensnitt
 FontFamilyAction.text=Teckensnitt
 FontSizeAction.text=Teckenstorlek
+format=Format
 format_menu_cloud_shapes=Moln 
 format_menu_edge_styles=Kantstil
 format_menu_edge_widths=Kantbredd
@@ -457,7 +459,7 @@ IconGroupPopupAction.time.text=Tid
 IconGroupPopupAction.user.text=Egna ikoner
 IconSelectionPlugin.text=V\u00E4lj ikon...
 IconSelectionPlugin.tooltip=<html>V\u00E4lj ikon genom att anv\u00E4nda ett nytt f\u00F6nster.</html>
-import=Importera
+import=I&mportera
 import_linked_branch_no_link=Den valda grenen har ingen l\u00E4nk att importera fr\u00E5n.
 ImportAction.text=Importera
 ImportBranchAction.text=F\u00F6rgrening...
@@ -499,13 +501,7 @@ map_not_saved=Tankekartan sparades inte f\u00F6rut.
 MapBackgroundColorAction.text=Bakgrund
 MaxNodeWidthAction.text=S\u00E4tt maximal grenbredd
 menu_attributes=Egenskaper
-menu_extras=Verk&tyg
-menu_file_import=I&mportera
-menu_filter=F&ilter
-menu_format=Format
 menu_insert=Infoga
-menu_navigate=Navigera
-menu_view=Visa
 mindmap=Tankekarta
 MindMapNodesFlavorHandler=Grenhierarki
 mindmaps=Tankekartor
@@ -523,6 +519,7 @@ ModesMenuAction.File.text=Filbl\u00E4ddrare
 ModesMenuAction.MindMap.text=Redigeringsl\u00E4ge
 most_recent_files=Senast anv\u00E4nda filer
 MoveToRootAction.text=Hoppa till rotgren
+navigate=Navigera
 NavigationNextMapAction.text=N\u00E4sta karta
 NavigationPreviousMapAction.text=F\u00F6reg\u00E5ende tankekarta
 new=&Ny
@@ -1352,6 +1349,7 @@ user_icon=Egen ikon "{0}"
 user_template_dir=Egna mallar
 user_zoom=Utskrift med zoomfaktor (0.0 - 2.0):
 version_up_to_date=Senaste versionen redan installerad
+view=Visa
 ViewerControllerAction.text=Externt objekt...
 ViewLayoutTypeAction.OUTLINE.text=\u00D6versiktsvy
 WebDocuAction.text=Webbdokumentation
