--- a/freeplane/resources/translations/Resources_tr.properties
+++ b/freeplane/resources/translations/Resources_tr.properties
@@ -94,6 +94,7 @@ ExportToImage.png.text=PNG Olarak...
 ExportToOoWriter.text=Open Office Writer Belgesi olarak...
 ExportToOoWriter.tooltip=Geni\u015Fletilmi\u015F d\u00FC\u011F\u00FCmler yap\u0131y\u0131, daralt\u0131lm\u0131\u015F d\u00FC\u011F\u00FCmleri belgenin i\u00E7eri\u011Fini olu\u015Fturur.
 extension_menu=Fiziksel Bi\u00E7em
+extras=Ara\u00E7lar
 f_button_unassigned=<no action>[translate me]
 FaqOpenURLAction.text=SSS
 file=Dosya
@@ -116,6 +117,7 @@ FollowLinkAction.text=Git:
 font=Yaz\u0131tipi
 FontFamilyAction.text=yaz\u0131tipi ailesi
 FontSizeAction.text=yaz\u0131tipi boyutu
+format=Bi\u00E7im
 format_menu_edge_styles=S\u0131n\u0131r Bi\u00E7emleri
 format_menu_edge_widths=S\u0131n\u0131r Geni\u015Flikleri
 FormatCopy.text=Bi\u00E7imi Kopyala
@@ -222,12 +224,7 @@ map_already_exists=Harita zaten var. \u00DCzerine yazmak ister misiniz?
 map_corrupted=Harita bozuk. Ayr\u0131nt\u0131lar?
 map_locked_by_open={0} haritas\u0131 \u015Fu an {1} kullan\u0131c\u0131s\u0131 taraf\u0131ndan d\u00FCzenleniyor. Salt okunur olarak a\u00E7\u0131l\u0131yor.
 map_locked_by_save_as={0} haritas\u0131 \u015Fu an {1} kullan\u0131c\u0131s\u0131 taraf\u0131ndan d\u00FCzenleniyor. Farkl\u0131 Kaydetme \u0130ptal Edildi.
-menu_extras=Ara\u00E7lar
-menu_file_import=\u0130\u00E7e Aktar
-menu_format=Bi\u00E7im
 menu_insert=Ekle
-menu_navigate=Git
-menu_view=G\u00F6r\u00FCn\u00FCm
 mindmap=Harita
 mindmaps=Haritalar
 mindmaps_desc=Haritalar (*.mm)
@@ -237,6 +234,7 @@ mode_title=Freeplane - {0} Modu
 modes=Modlar
 most_recent_files=Son Kullan\u0131lanlar
 MoveToRootAction.text=K\u00F6ke ta\u015F\u0131
+navigate=Git
 NavigationNextMapAction.text=Sonraki Harita
 NavigationPreviousMapAction.text=\u00D6nceki Harita
 new_mindmap=Yeni Zihin Haritas\u0131
@@ -552,6 +550,7 @@ url_load_error=Harita y\u00FCklenemedi URL:
 user_defined_zoom=Kullan\u0131c\u0131 tan\u0131ml\u0131.
 user_defined_zoom_status_bar=Yak\u0131nla\u015Ft\u0131rma kullan\u0131c\u0131 tan\u0131ml\u0131 olarak de\u011Fi\u015Ftirildi {0}%.
 user_zoom=\u00D6l\u00E7ek \u00E7arpan\u0131n\u0131 yazd\u0131r (0.0 - 2.0):
+view=G\u00F6r\u00FCn\u00FCm
 width=Geni\u015Flik
 yes=Evet
 ZoomInAction.text=Yakla\u015F
