--- a/freeplane/resources/translations/Resources_zh_CN.properties
+++ b/freeplane/resources/translations/Resources_zh_CN.properties
@@ -350,6 +350,7 @@ ExternalImageChangeAction.text=\u66F4\u6362\u56FE\u7247...
 ExternalImageRemoveAction.text=\u79FB\u9664\u56FE\u7247
 ExtractLinkFromTextAction.text=\u4ECE\u6587\u672C\u4E2D\u63D0\u53D6\u8D85\u94FE\u63a5
 ExtractLinkFromTextAction.tooltip=\u8BBE\u7F6E\u8282\u70B9\u6587\u672C\u4E2D\u627E\u5230\u7684\u8D85\u94FE\u63a5
+extras=\u5DE5\u5177(&T)
 f_button_unassigned=<\u65E0\u52A8\u4F5C>
 FaqOpenURLAction.text=FAQ
 file=\u6587\u4EF6(&F)
@@ -380,7 +381,7 @@ FileRevisionsDialog.question=\u627E\u5230\u4FEE\u8BA2 {0}
 FileRevisionsDialog.restore=\u6062\u590d
 FileRevisionsDialog.restore.tooltip=\u628A{0}\u66FF\u6362\u4E3A{1}
 FileRevisionsDialog.title=\u6587\u4EF6\u4FEE\u8BA2\u5217\u8868
-filter=\u8FC7\u6EE4\u5668
+filter=\u8FC7\u6EE4\u5668(&I)
 filter_add=\u6DFB\u52A0(&A)
 filter_and=\u4E0E(&N)
 filter_any_text=\u8282\u70B9\u6838\u5FC3\uFF0C\u660E\u7EC6\u6216\u8005\u6CE8\u89e3
@@ -449,6 +450,7 @@ FollowLinkAction.text=\u6253\u5F00\u8D85\u94FE\u63A5:
 font=\u5B57\u4F53
 FontFamilyAction.text=\u5B57\u4F53
 FontSizeAction.text=\u5B57\u4F53\u5927\u5C0F
+format=\u683C\u5F0F(&O)
 format_invalid_pattern=\u4E0D\u662F\u6709\u6548\u7684\u6837\u5f0f
 format_menu_cloud_shapes=\u4E91\u72B6\u5305\u88F9(\u65B0\u589E\u6216\u53D8\u5F62)
 format_menu_edge_styles=\u8FDE\u7EBF\u98CE\u683C
@@ -642,7 +644,7 @@ IconSelectionPlugin.text=\u9009\u62E9\u56FE\u6807...
 IconSelectionPlugin.tooltip=<html>\u5728\u6B64\u4F7F\u7528\u5B50\u7A97\u53E3\u9009\u62E9\u56FE\u6807\u3002</html>
 image_covertLink=\u5C06\u94FE\u63A5\u8F6C\u5316\u6210\u56FE\u7247
 ImageFlavorHandler=\u56FE\u7247(\u4F7F\u7528\u4E0D\u540C\u7684\u6587\u4EF6)
-import=\u5BFC\u5165
+import=\u5BFC\u5165(&M)
 import_linked_branch_no_link=\u9009\u4E2D\u7684\u8282\u70B9\u6CA1\u6709\u8FDE\u63A5\u53EF\u4EE5\u5BFC\u5165\u3002
 ImportAction.text=\u5BFC\u5165(&I)
 ImportBranchAction.text=\u5206\u679D...
@@ -672,6 +674,7 @@ license_text=<html>This program is free software; you can redistribute it and/or
 link_error=\u9519\u8BEF\u8FDE\u63A5\u2014{0}\u2014\u6CA1\u6709\u52A0\u8f7d
 link_not_available_any_more=\u8FDE\u63A5\u4E0D\u518D\u6709\u6548\u3002\u8282\u70B9\u5DF2\u5220\u9664\u3002
 link_not_found=\u94FE\u63A5 {0} \u672A\u53D1\u73B0.
+links=\u94FE\u63a5
 load=\u52A0\u8F7D(&L)
 load_accelerator_presets=\u52A0\u8f7d
 LoadAcceleratorPresetsAction.textPatterns.text=\u6587\u672C\u6A21\u5f0f
@@ -735,10 +738,6 @@ menu_displayAttributes=\u8282\u70B9\u5C5E\u6027
 menu_encryption=\u5BC6\u7801\u4FDD\u62a4
 menu_error=\u7528\u6237\u5B9A\u4E49\u83DC\u5355\u6837\u5F0F\u9519\u8BEF  {0};\n {1}\n \u9000\u51FA..
 menu_extensions=\u8282\u70B9\u6269\u5C55\u5185\u5bb9
-menu_extras=\u5DE5\u5177(&T)
-menu_file_import=\u5BFC\u5165(&M)
-menu_filter=\u8FC7\u6EE4\u5668(&I)
-menu_format=\u683C\u5F0F(&O)
 menu_group=\u8282\u70B9\u7FA4\u7ec4
 menu_hoverView=\u5DE5\u5177\u63D0\u793a
 menu_iconByCategory=\u56FE\u6807\u5206\u7C7B..
@@ -746,25 +745,19 @@ menu_iconView=\u56FE\u6807
 menu_image=\u56FE\u7247
 menu_insert=\u63D2\u5165(&S)
 menu_latex_formula=LaTeX\u516C\u5f0f
-menu_links=\u94FE\u63a5
 menu_manageStyles=\u7BA1\u7406\u6837\u5f0f
 menu_moveNode=\u79FB\u52A8\u548C\u6392\u5e8f
-menu_navigate=\u5B9A\u4F4D(&N)
 menu_newNode=\u65B0\u589E\u8282\u70b9
 menu_node=\u8282\u70b9
 menu_node_features=\u8282\u70B9\u7279\u6027
 menu_nodes=\u8282\u70b9
 menu_nodeView=\u8282\u70B9\u6838\u5fc3
-menu_notes=\u6CE8\u89e3
 menu_noteView=\u6CE8\u89e3
-menu_progress=\u8FDB\u5EA6\u56FE\u6807(%)
 menu_remove_icons=\u79FB\u9664\u56FE\u6807
 menu_removeAttribute=\u79FB\u9664\u5C5E\u6027
 menu_select=\u9009\u62e9
 menu_time=\u65F6\u95F4\u7BA1\u7406
 menu_title=\u8282\u70B9\u6838\u5FC3\u5185\u5bb9
-menu_toolbars=\u5DE5\u5177\u680f
-menu_view=\u89C6\u56FE(&V)
 menu_viewmode=\u67E5\u770B\u9009\u9879
 MenuUtils.invalid_menuitem={0} \u4E0D\u662F\u4E00\u4E2A\u6709\u6548\u7684\u83DC\u5355\u9879\u7684\u952e
 mindmap=\u601D\u7EF4\u5BFC\u56FE
@@ -786,6 +779,7 @@ ModesMenuAction.MindMap.text=\u601D\u7EF4\u5BFC\u56FE\u7F16\u8F91\u5668
 most_recent_files=\u6700\u8FD1\u6587\u4EF6(&M)
 MoveToRootAction.text=\u8F6C\u5230\u6839\u8282\u70B9
 NameConditionAction.text=\u8BBE\u5B9A\u540D\u79f0
+navigate=\u5B9A\u4F4D(&N)
 NavigationNextMapAction.text=\u540E\u4E00\u4E2A\u56fe
 NavigationPreviousMapAction.text=\u524D\u4E00\u4E2A\u56fe
 new=\u65B0\u5efa
@@ -856,6 +850,7 @@ normal=\u5E38\u89C4
 not_saved_for_image_error=\u4F7F\u7528\u6587\u4EF6\u9009\u62E9\u5668\u8BBE\u7F6E\u56FE\u7247\u524D\u5FC5\u987B\u5148\u4FDD\u5B58\u5BFC\u56fe
 not_saved_for_link_error=\u7528\u6587\u4EF6\u9009\u62E9\u5668\u6DFB\u52A0\u6587\u4EF6\u94FE\u63A5\u524D\u5FC5\u987B\u5148\u4FDD\u5B58\u56FE\u3002
 note_window_location=\u6CE8\u89E3\u7A97\u53E3\u4F4D\u7f6e
+notes=\u6CE8\u89e3
 ok=\u786E\u5B9A(&O)
 OKAction.text=\u786E\u5B9A (&O)
 OnlineReference.text=\u601D\u7EF4\u5BFC\u56FE\u5728\u7EBF\u6587\u6863
@@ -1368,6 +1363,7 @@ PrintAction.text=\u6253\u5370...
 PrintDirectAction.text=\u6253\u5370
 printing_settings=\u6253\u5370\u6BD4\u4F8B
 PrintPreviewAction.text=\u6253\u5370\u9884\u89C8
+progress=\u8FDB\u5EA6\u56FE\u6807(%)
 PropertyAction.dialog=\u9996\u9009\u9879
 PropertyAction.text=\u9996\u9009\u9879 ...
 QuickFilterAction.text=\u5FEB\u901F\u8FC7\u6ee4
@@ -1711,6 +1707,7 @@ ToggleLeftToolbarAction.text=\u5DE6\u4FA7\u5DE5\u5177\u680F
 ToggleMenubarAction.text=\u83DC\u5355\u680F
 ToggleStatusAction.text=\u663E\u793A\u72B6\u6001\u5217
 ToggleToolbarAction.text=\u5DE5\u5177\u680F
+toolbars=\u5DE5\u5177\u680f
 undefined_error=\u53D1\u751F\u4E86\u4E00\u4E2A\u610F\u5916\u9519\u8BEF\u3002\u8BF7\u8BD5\u7740\u63D0\u4EA4\u4E00\u4E2A\u9519\u8BEF\u62A5\u544A\u3002
 underline=\u4E0B\u5212\u7EBF
 UnderlineAction.text=\u4E0B\u5212\u7ebf
@@ -1739,6 +1736,7 @@ user_template_dir=\u7528\u6237\u6A21\u7248
 user_zoom=\u6253\u5370\u7F29\u653E\u7CFB\u6570 (0.0 - 2.0):
 value_format=\u53D8\u91CF\u683C\u5f0f
 version_up_to_date=\u4F60\u5F53\u524D\u4F7F\u7528\u7684\u662F\u6700\u65B0\u7248\u672C\u7A0B\u5e8f
+view=\u89C6\u56FE(&V)
 ViewerControllerAction.text=\u5916\u90E8\u5BF9\u8C61...
 ViewLayoutTypeAction.OUTLINE.text=\u5927\u7EB2\u89C6\u56fe
 WebDocuAction.text=Web \u6587\u6863
