--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -369,6 +369,7 @@ ExternalImageChangeAction.text=\u66F4\u63DB\u5716\u7247...
 ExternalImageRemoveAction.text=\u79FB\u9664\u5716\u7247
 ExtractLinkFromTextAction.text=\u8403\u53D6\u8D85\u9023\u7D50
 ExtractLinkFromTextAction.tooltip=\u5F9E\u7BC0\u9EDE\u6587\u5B57\u4E2D\u627E\u5230\u4E26\u8A2D\u5B9A\u8D85\u9023\u7D50
+extras=(&T)\u5DE5\u5177
 f_button_unassigned=<\u672A\u8A2D\u5B9A\u52D5\u4F5C>
 FaqOpenURLAction.text=\u5E38\u898B\u554F\u984C\u89E3\u7B54
 file=\u6A94\u6848
@@ -399,7 +400,7 @@ FileRevisionsDialog.question=\u767C\u73FE {0} \u7684\u4FEE\u8A02\u7248
 FileRevisionsDialog.restore=\u56DE\u5FA9
 FileRevisionsDialog.restore.tooltip=\u7528 {1} \u53D6\u4EE3 {0}
 FileRevisionsDialog.title=\u6A94\u6848\u4FEE\u8A02
-filter=\u7BE9\u9078
+filter=(&i)\u7BE9\u9078
 filter_add=\u65B0\u589E
 filter_and=AND
 filter_any_text=\u7BC0\u9EDE\u6838\u5FC3, \u7D30\u7BC0\u548C\u8A3B\u89E3
@@ -468,6 +469,7 @@ FollowLinkAction.text=\u958B\u555F\u8D85\u9023\u7D50
 font=\u5B57\u578B
 FontFamilyAction.text=\u5B57\u9AD4
 FontSizeAction.text=\u5B57\u578B\u5927\u5C0F
+format=(&o)\u683C\u5F0F
 format_invalid_pattern=\u4E0D\u662F\u6709\u6548\u7684\u6A23\u5F0F
 format_menu_cloud_shapes=\u96F2\u72C0\u5305\u8986 (\u65B0\u589E\u6216\u8B8A\u5F62)
 format_menu_edge_styles=(&E)\u5206\u652F\u7DDA\u6A23\u5F0F
@@ -661,7 +663,7 @@ IconSelectionPlugin.text=\u5C0F\u5716\u793A\u5217\u8868...
 IconSelectionPlugin.tooltip=<html>\u958B\u5B50\u8996\u7A97\u9078\u64C7\u5C0F\u5716\u793A</html>
 image_covertLink=\u5C07\u9023\u7D50\u8F49\u63DB\u6210\u5716\u7247
 ImageFlavorHandler=\u5716\u7247 (\u4F7F\u7528\u4E0D\u540C\u7684\u6A94\u6848)
-import=\u532F\u5165
+import=(&m)\u532F\u5165
 import_linked_branch_no_link=\u9078\u53D6\u7684\u7BC0\u9EDE\u7121\u9023\u7D50\u6A94\u6848\u53EF\u532F\u5165.
 ImportAction.text=\u532F\u5165
 ImportBranchAction.text=\u532F\u5165\u7279\u5B9A\u5FC3\u667A\u5716\u6210\u5206\u652F...
@@ -700,6 +702,7 @@ license_text=<html>This program is free software; you can redistribute it and/or
 link_error=\u932F\u8AA4\u7684\u9023\u7D50 "{0}" \u672A\u8F09\u5165
 link_not_available_any_more=\u9023\u7D50\u4E0D\u518D\u9069\u7528, \u7BC0\u9EDE\u5DF2\u88AB\u522A\u9664.
 link_not_found=\u627E\u4E0D\u5230\u9023\u7D50 {0}\u3002
+links=\u8D85\u9023\u7D50
 load=(&L)\u8F09\u5165
 load_accelerator_presets=\u8F09\u5165
 LoadAcceleratorPresetsAction.textPatterns.text=\u6587\u5B57\u6A23\u5F0F
@@ -767,10 +770,6 @@ menu_displayAttributes=\u7BC0\u9EDE\u5C6C\u6027
 menu_encryption=\u5BC6\u78BC\u4FDD\u8B77
 menu_error=\u4F7F\u7528\u8005\u5B9A\u7FA9\u7684\u9078\u55AE\u7D50\u69CB {0} \u6709\u932F\u8AA4\uFF1A\n{1}\n\u96E2\u958B
 menu_extensions=\u7BC0\u9EDE\u5EF6\u4F38\u5167\u5BB9
-menu_extras=(&T)\u5DE5\u5177
-menu_file_import=(&m)\u532F\u5165
-menu_filter=(&i)\u7BE9\u9078
-menu_format=(&o)\u683C\u5F0F
 menu_group=\u7FA4\u7D44\u7BC0\u9EDE
 menu_hoverView=\u7BC0\u9EDE\u63D0\u793A
 menu_iconByCategory=\u5C0F\u5716\u793A\u5206\u985E...
@@ -778,26 +777,20 @@ menu_iconView=\u5C0F\u5716\u793A
 menu_image=\u5716\u7247
 menu_insert=(&s)\u65B0\u589E
 menu_latex_formula=LaTeX \u6578\u5B78\u5F0F
-menu_links=\u8D85\u9023\u7D50
 menu_manageStyles=(&M)\u7BA1\u7406\u6A23\u5F0F
 menu_moveNode=\u79FB\u52D5\u548C\u6392\u5E8F
-menu_navigate=(&N)\u5C0E\u89BD
 menu_newNode=\u65B0\u589E\u7BC0\u9EDE
 menu_node=\u7BC0\u9EDE
 menu_node_features=(&u)\u7BC0\u9EDE\u7279\u9EDE
 menu_nodes=(&N)\u7BC0\u9EDE
 menu_nodeView=\u7BC0\u9EDE\u6838\u5FC3
-menu_notes=\u8A3B\u89E3
 menu_noteView=\u8A3B\u89E3
 menu_openmaps=\u5FC3\u667A\u5716
-menu_progress=\u9032\u5C55\u5C0F\u5716\u793A (%)
 menu_remove_icons=\u79FB\u9664\u5C0F\u5716\u793A
 menu_removeAttribute=\u79FB\u9664\u5C6C\u6027
 menu_select=\u9078\u53D6
 menu_time=\u6642\u9593\u7BA1\u7406
 menu_title=\u7BC0\u9EDE\u6838\u5FC3\u5167\u5BB9
-menu_toolbars=\u5DE5\u5177\u5217
-menu_view=(&V)\u6AA2\u8996
 menu_viewmode=\u6AA2\u8996\u8A2D\u5B9A
 MenuUtils.invalid_menuitem={0} \u4E0D\u662F\u6709\u6548\u7684\u9078\u55AE\u9805\u76EE\u9375\u3002
 mindmap=\u5FC3\u667A\u5716
@@ -819,6 +812,7 @@ ModesMenuAction.MindMap.text=\u5FC3\u667A\u5716\u7DE8\u8F2F\u5668
 most_recent_files=\u6700\u8FD1\u958B\u555F\u7684\u6A94\u6848
 MoveToRootAction.text=\u79FB\u5230\u4E3B\u7BC0\u9EDE
 NameConditionAction.text=\u8A2D\u5B9A\u540D\u7A31
+navigate=(&N)\u5C0E\u89BD
 NavigationNextMapAction.text=\u4E0B\u4E00\u5F35\u5FC3\u667A\u5716
 NavigationPreviousMapAction.text=\u4E0A\u4E00\u5F35\u5FC3\u667A\u5716
 new=(&N)\u65B0\u589E
@@ -894,6 +888,7 @@ normal=\u4E00\u822C
 not_saved_for_image_error=\u8A2D\u5B9A\u5716\u7247\u524D\u5FC5\u9808\u5148\u5132\u5B58\u5FC3\u667A\u5716
 not_saved_for_link_error=\u8A2D\u5B9A\u9023\u7D50\u524D\u5FC5\u9808\u5148\u5132\u5B58\u5FC3\u667A\u5716
 note_window_location=\u8A3B\u89E3\u8996\u7A97\u4F4D\u7F6E
+notes=\u8A3B\u89E3
 ok=(&O)\u78BA\u5B9A
 OKAction.text=(&O)\u78BA\u5B9A
 OnlineReference.text=\u53C3\u8003\u624B\u518A
@@ -1445,6 +1440,7 @@ PrintAction.text=(&P)\u5217\u5370...
 PrintDirectAction.text=\u5217\u5370
 printing_settings=\u5217\u5370\u8A2D\u5B9A
 PrintPreviewAction.text=(&v)\u9810\u89BD\u5217\u5370...
+progress=\u9032\u5C55\u5C0F\u5716\u793A (%)
 PropertyAction.dialog=\u500B\u4EBA\u5316\u8A2D\u5B9A
 PropertyAction.text=\u500B\u4EBA\u5316\u8A2D\u5B9A ...
 QuickFilterAction.text=\u5FEB\u901F\u7BE9\u9078
@@ -1802,6 +1798,7 @@ ToggleMenubarAction.text=\u9078\u55AE\u5217
 ToggleScrollbarsAction.text=\u6372\u8EF8
 ToggleStatusAction.text=\u986F\u793A\u72C0\u614B\u5217
 ToggleToolbarAction.text=(&T)\u5DE5\u5177\u5217
+toolbars=\u5DE5\u5177\u5217
 undefined_error=\u975E\u9810\u671F\u7684\u932F\u8AA4\uFF0C\u8ACB\u63D0\u51FA\u932F\u8AA4\u5831\u544A\u3002
 underline=\u5E95\u7DDA
 UnderlineAction.text=\u5E95\u7DDA
@@ -1841,6 +1838,7 @@ user_template_dir=\u4F7F\u7528\u8005\u6A23\u7248
 user_zoom=\u5217\u5370\u7E2E\u653E\u6BD4 (0.0 - 2.0)\uFF1A
 value_format=\u6578\u503C\u683C\u5F0F
 version_up_to_date=\u60A8\u5DF2\u7D93\u4F7F\u7528\u6700\u65B0\u7248\u7A0B\u5F0F
+view=(&V)\u6AA2\u8996
 ViewerControllerAction.text=\u5916\u90E8\u7269\u4EF6...
 ViewLayoutTypeAction.OUTLINE.text=\u5927\u7DB1\u8996\u5716
 WebDocuAction.text=\u7DB2\u9801\u6587\u4EF6
