--- a/freeplane/resources/translations/Resources_el.properties
+++ b/freeplane/resources/translations/Resources_el.properties
@@ -351,6 +351,7 @@ ExternalImageChangeAction.text=\u0391\u03BB\u03BB\u03B1\u03B3\u03AE \u03B5\u03B9
 ExternalImageRemoveAction.text=\u0394\u03B9\u03B1\u03B3\u03C1\u03B1\u03C6\u03AE \u03B5\u03B9\u03BA\u03CC\u03BD\u03B1\u03C2
 ExtractLinkFromTextAction.text=\u039C\u03B5\u03C4\u03B1\u03C4\u03C1\u03BF\u03C0\u03AE \u03C3\u03C5\u03BD\u03B4\u03AD\u03C3\u03BC\u03BF\u03C5 \u03BC\u03AD\u03C3\u03B1 \u03B1\u03C0\u03CC \u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF
 ExtractLinkFromTextAction.tooltip=\u039F\u03C1\u03B9\u03C3\u03BC\u03CC\u03C2 \u03C3\u03C5\u03BD\u03B4\u03AD\u03C3\u03BC\u03BF\u03C5 \u03B1\u03C0\u03CC \u03C4\u03B7 \u03B4\u03B9\u03B5\u03CD\u03B8\u03C5\u03BD\u03C3\u03B7 \u03BA\u03B1\u03B9 \u03C4\u03BF \u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF \u03C4\u03BF\u03C5 \u03BA\u03CC\u03BC\u03B2\u03BF\u03C5
+extras=\u0395\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03B1
 f_button_unassigned=\u03BA\u03B5\u03BD\u03CC
 FaqOpenURLAction.text=\u03A3\u03C5\u03BD\u03AE\u03B8\u03B5\u03B9\u03C2 \u0395\u03C1\u03C9\u03C4\u03AE\u03C3\u03B5\u03B9\u03C2
 file=\u0391\u03C1\u03C7\u03B5\u03AF\u03BF
@@ -450,6 +451,7 @@ FollowLinkAction.text=\u0391\u03BD\u03BF\u03B9\u03B3\u03BC\u03B1 \u03C3\u03C5\u0
 font=\u0393\u03C1\u03B1\u03BC\u03BC\u03B1\u03C4\u03BF\u03C3\u03B5\u03B9\u03C1\u03AC
 FontFamilyAction.text=\u039F\u03B9\u03BA\u03BF\u03B3\u03AD\u03BD\u03B5\u03B9\u03B1 \u03B3\u03C1\u03B1\u03BC\u03BC\u03B1\u03C4\u03BF\u03C3\u03B5\u03B9\u03C1\u03AC\u03C2
 FontSizeAction.text=\u039C\u03AD\u03B3\u03B5\u03B8\u03BF\u03C2 \u03B3\u03C1\u03B1\u03BC\u03BC\u03B1\u03C4\u03BF\u03C3\u03B5\u03B9\u03C1\u03AC\u03C2
+format=\u039C\u03BF\u03C1\u03C6\u03AE
 format_invalid_pattern=\u03BC\u03B7 \u03AD\u03B3\u03BA\u03C5\u03C1\u03BF \u03C0\u03C1\u03CC\u03C4\u03C5\u03C0\u03BF
 format_menu_cloud_shapes=\u03A0\u03C1\u03BF\u03C3\u03B8\u03AE\u03BA\u03B7 \u03C3\u03CD\u03BD\u03BD\u03B5\u03C6\u03BF\u03C5 \u03AE \u03B1\u03BB\u03BB\u03B1\u03B3\u03AE \u03C3\u03C4\u03C5\u03BB
 format_menu_edge_styles=\u039C\u03BF\u03C1\u03C6\u03AE \u03C0\u03B5\u03C1\u03B9\u03B3\u03C1\u03AC\u03BC\u03BC\u03B1\u03C4\u03BF\u03C2
@@ -656,6 +658,7 @@ JoinNodesAction.text=\u03A3\u03C5\u03BD\u03AD\u03BD\u03BD\u03C9\u03C3\u03B7 \u03
 less_than_two_selected_nodes=\u0393\u03B9\u03B1 \u03BD\u03B1 \u03AD\u03C7\u03BF\u03C5\u03BC\u03B5 \u03C3\u03CD\u03BD\u03B4\u03B5\u03C3\u03B7 \u03C0\u03C1\u03AD\u03C0\u03B5\u03B9 \u03BD\u03B1 \u03B5\u03C0\u03B9\u03BB\u03AD\u03BE\u03B5\u03C4\u03B5 \u03C4\u03BF\u03C5\u03BB\u03AC\u03C7\u03B9\u03C3\u03C4\u03BF\u03BD \u03B4\u03CD\u03BF \u03BA\u03CC\u03BC\u03B2\u03BF\u03C5\u03C2.
 link_not_available_any_more=\u0397 \u03C3\u03CD\u03BD\u03B4\u03B5\u03C3\u03B7 \u03B4\u03B5\u03BD \u03B9\u03C3\u03C7\u03CD\u03B5\u03B9. \u039F \u03BA\u03CC\u03BC\u03B2\u03BF\u03C2 \u03B4\u03B9\u03B1\u03B3\u03C1\u03AC\u03C6\u03B7\u03BA\u03B5 \u03C3\u03C4\u03BF \u03BC\u03B5\u03C3\u03BF\u03B4\u03B9\u03AC\u03C3\u03C4\u03B7\u03BC\u03B1.
 link_not_found=\u039F \u03B4\u03B5\u03C3\u03BC\u03CC\u03C2 {0} \u03B4\u03B5\u03BD \u03B2\u03C1\u03AD\u03B8\u03B7\u03BA\u03B5.
+links=\u03A3\u03CD\u03BD\u03B4\u03B5\u03C3\u03BC\u03BF\u03C2
 load=\u03A6\u03CC\u03C1\u03C4\u03C9\u03C3\u03B7
 load_accelerator_presets=\u03A6\u03CC\u03C1\u03C4\u03C9\u03C3\u03B7
 LoadAcceleratorPresetsAction.textPatterns.text=\u03C3\u03C5\u03BD\u03B4\u03C5\u03B1\u03C3\u03BC\u03BF\u03AF \u03BA\u03B5\u03B9\u03BC\u03AD\u03BD\u03BF\u03C5
@@ -723,10 +726,6 @@ menu_displayAttributes=\u03A7\u03B1\u03C1\u03B1\u03BA\u03C4\u03B7\u03C1\u03B9\u0
 menu_encryption=\u03A0\u03C1\u03BF\u03C3\u03C4\u03B1\u03C3\u03AF\u03B1 \u03BC\u03B5 \u03BA\u03C9\u03B4\u03B9\u03BA\u03CC
 menu_error=\u03A3\u03C6\u03AC\u03BB\u03BC\u03B1 \u03C3\u03C4\u03B7 \u03B4\u03BF\u03BC\u03AE \u03BC\u03B5\u03BD\u03BF\u03CD \u03C0\u03BF\u03C5 \u03BF\u03C1\u03AF\u03C3\u03C4\u03B7\u03BA\u03B5 \u03B1\u03C0\u03CC \u03C4\u03BF \u03C7\u03C1\u03AE\u03C3\u03C4\u03B7 {0}:\n{1}\n\u0391\u03BA\u03CD\u03C1\u03C9\u03C3\u03B7
 menu_extensions=\u0395\u03C0\u03B5\u03BA\u03C4\u03AC\u03C3\u03B5\u03B9\u03C2 \u039A\u03CC\u03BC\u03B2\u03BF\u03C5
-menu_extras=\u0395\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03B1
-menu_file_import=\u0395\u03B9\u03C3\u03B1\u03B3\u03C9\u03B3\u03AE
-menu_filter=\u03A6\u03AF\u03BB\u03C4\u03C1\u03BF
-menu_format=\u039C\u03BF\u03C1\u03C6\u03AE
 menu_group=\u039F\u03BC\u03AC\u03B4\u03B1 \u039A\u03CC\u03BC\u03B2\u03C9\u03BD
 menu_hoverView=\u03A0\u03B5\u03B4\u03AF\u03B1 \u03B2\u03BF\u03AE\u03B8\u03B5\u03B9\u03B1\u03C2
 menu_iconByCategory=\u0395\u03B9\u03BA\u03BF\u03BD\u03AF\u03B4\u03B9\u03BF \u03B1\u03BD\u03AC \u03BA\u03B1\u03C4\u03B7\u03B3\u03BF\u03C1\u03AF\u03B1...
@@ -734,25 +733,19 @@ menu_iconView=\u0395\u03B9\u03BA\u03BF\u03BD\u03AF\u03B4\u03B9\u03B1
 menu_image=\u0395\u03B9\u03BA\u03CC\u03BD\u03B1
 menu_insert=\u0395\u03B9\u03C3\u03B1\u03B3\u03C9\u03B3\u03AE
 menu_latex_formula=\u03B5\u03BD\u03C4\u03BF\u03BB\u03AE LaTeX
-menu_links=\u03A3\u03CD\u03BD\u03B4\u03B5\u03C3\u03BC\u03BF\u03C2
 menu_manageStyles=\u0394\u03B9\u03B1\u03C7\u03B5\u03AF\u03C1\u03B9\u03C3\u03B7 \u03A3\u03C4\u03C5\u03BB
 menu_moveNode=\u039C\u03B5\u03C4\u03B1\u03BA\u03AF\u03BD\u03B7\u03C3\u03B7 \u03BA\u03B1\u03B9 \u03C4\u03B1\u03BE\u03B9\u03BD\u03CC\u03BC\u03B7\u03C3\u03B7
-menu_navigate=\u03A0\u03BB\u03BF\u03AE\u03B3\u03B7\u03C3\u03B7
 menu_newNode=\u039D\u03AD\u03BF\u03C2 \u039A\u03CC\u03BC\u03B2\u03BF\u03C2
 menu_node=\u039A\u03CC\u03BC\u03B2\u03BF\u03C2
 menu_node_features=\u0395\u03C0\u03B9\u03BB\u03BF\u03B3\u03AD\u03C2 \u039A\u03CC\u03BC\u03B2\u03BF\u03C5
 menu_nodes=\u039A\u03CC\u03BC\u03B2\u03BF\u03B9
 menu_nodeView=\u039A\u03AD\u03BD\u03C4\u03C1\u03BF \u03BA\u03CC\u03BC\u03B2\u03BF\u03C5
-menu_notes=\u03A3\u03B7\u03BC\u03B5\u03AF\u03C9\u03C3\u03B7
 menu_noteView=\u03A3\u03B7\u03BC\u03B5\u03B9\u03CE\u03C3\u03B5\u03B9\u03C2
-menu_progress=\u0395\u03B9\u03BA\u03BF\u03BD\u03AF\u03B4\u03B9\u03BF \u03C0\u03C1\u03BF\u03CC\u03B4\u03BF\u03C5 (%)
 menu_remove_icons=\u0394\u03B9\u03B1\u03B3\u03C1\u03B1\u03C6\u03AE \u03B5\u03B9\u03BA\u03BF\u03BD\u03B9\u03B4\u03AF\u03C9\u03BD
 menu_removeAttribute=\u0394\u03B9\u03B1\u03B3\u03C1\u03B1\u03C6\u03AE \u03C7\u03B1\u03C1\u03B1\u03BA\u03C4\u03B7\u03C1\u03B9\u03C3\u03C4\u03B9\u03BA\u03BF\u03CD
 menu_select=\u0395\u03C0\u03B9\u03BB\u03BF\u03B3\u03AE
 menu_time=\u0394\u03B9\u03B1\u03C7\u03B5\u03AF\u03C1\u03B9\u03C3\u03B7 \u03C7\u03C1\u03CC\u03BD\u03BF\u03C5
 menu_title=\u039A\u03AD\u03BD\u03C4\u03C1\u03BF \u03BA\u03CC\u03BC\u03B2\u03BF\u03C5
-menu_toolbars=\u039C\u03C0\u03AC\u03C1\u03B5\u03C2 \u03B5\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03C9\u03BD
-menu_view=\u03A0\u03C1\u03BF\u03B2\u03BF\u03BB\u03AE
 menu_viewmode=\u0395\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7 \u03B5\u03C0\u03B9\u03BB\u03BF\u03B3\u03CE\u03BD
 MenuUtils.invalid_menuitem=\u03C4\u03BF {0} \u03B4\u03B5\u03BD \u03B5\u03AF\u03BD\u03B1\u03B9 \u03AD\u03B3\u03BA\u03C5\u03C1\u03BF \u03C0\u03BB\u03AE\u03BA\u03C4\u03C1\u03BF \u03BC\u03B5\u03BD\u03BF\u03CD
 mindmap=\u0394\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1
@@ -774,6 +767,7 @@ ModesMenuAction.MindMap.text=\u0395\u03C0\u03B5\u03BE\u03B5\u03C1\u03B3\u03B1\u0
 most_recent_files=\u03A0\u03C1\u03CC\u03C3\u03C6\u03B1\u03C4\u03B1 \u03B1\u03C1\u03C7\u03B5\u03AF\u03B1
 MoveToRootAction.text=\u039C\u03B5\u03C4\u03B1\u03BA\u03AF\u03BD\u03B7\u03C3\u03B7 \u03C3\u03C4\u03B7\u03BD \u0391\u03C1\u03C7\u03AE
 NameConditionAction.text=\u039F\u03C1\u03B9\u03C3\u03BC\u03CC\u03C2 \u03BF\u03BD\u03CC\u03BC\u03B1\u03C4\u03BF\u03C2
+navigate=\u03A0\u03BB\u03BF\u03AE\u03B3\u03B7\u03C3\u03B7
 NavigationNextMapAction.text=\u0395\u03C0\u03CC\u03BC\u03B5\u03BD\u03BF \u03B4\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1
 NavigationPreviousMapAction.text=\u03A0\u03C1\u03BF\u03B7\u03B3\u03BF\u03CD\u03BC\u03B5\u03BD\u03BF \u0394\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1
 new=\u039D\u03AD\u03BF
@@ -843,6 +837,7 @@ normal=\u03A3\u03C5\u03BD\u03AE\u03B8\u03B7\u03C2
 not_saved_for_image_error=\u039F \u03C7\u03AC\u03C1\u03C4\u03B7\u03C2 \u03C0\u03C1\u03AD\u03C0\u03B5\u03B9 \u03BD\u03B1 \u03B1\u03C0\u03BF\u03B8\u03B7\u03BA\u03B5\u03C5\u03C4\u03B5\u03AF \u03C0\u03C1\u03CE\u03C4\u03B1 \u03B3\u03B9\u03B1 \u03BD\u03B1 \u03BF\u03C1\u03AF\u03C3\u03B5\u03C4\u03B5 \u03B5\u03B9\u03BA\u03CC\u03BD\u03B1
 not_saved_for_link_error=\u03A4\u03BF \u03B4\u03B9\u03AC\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1 \u03C0\u03C1\u03AD\u03C0\u03B5\u03B9 \u03BD\u03B1 \u03B1\u03C0\u03BF\u03B8\u03B7\u03BA\u03B5\u03C5\u03B8\u03B5\u03AF, \u03C0\u03C1\u03B9\u03BD \u03BD\u03B1 \u03BC\u03C0\u03BF\u03C1\u03AD\u03C3\u03B5\u03C4\u03B5 \u03BD\u03B1 \u03BF\u03C1\u03AF\u03C3\u03B5\u03C4\u03B5 \u03C3\u03CD\u03BD\u03B4\u03B5\u03C3\u03B7 \u03B3\u03C1\u03B1\u03C6\u03B9\u03BA\u03AC
 note_window_location=\u0398\u03AD\u03C3\u03B7 \u03C0\u03B5\u03B4\u03AF\u03BF\u03C5 \u03C3\u03C7\u03BF\u03BB\u03AF\u03C9\u03BD
+notes=\u03A3\u03B7\u03BC\u03B5\u03AF\u03C9\u03C3\u03B7
 ok=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
 OKAction.text=\u0395\u03BD\u03C4\u03AC\u03BE\u03B5\u03B9
 OnlineReference.text=\u039F\u03B4\u03B7\u03B3\u03AF\u03B5\u03C2 \u03C7\u03C1\u03AE\u03C3\u03B7\u03C2 \u03C3\u03C4\u03BF \u03B4\u03B9\u03B1\u03B4\u03AF\u03BA\u03C4\u03C5\u03BF
@@ -1356,6 +1351,7 @@ PrintAction.text=\u0395\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7 \u03C7\u03AC\u
 PrintDirectAction.text=\u0395\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7...
 printing_settings=\u039A\u03BB\u03AF\u03BC\u03B1\u03BA\u03B1 \u03B5\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7\u03C2
 PrintPreviewAction.text=\u03A0\u03C1\u03BF\u03B5\u03C0\u03B9\u03C3\u03BA\u03CC\u03C0\u03B9\u03C3\u03B7 \u03B5\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7\u03C2...
+progress=\u0395\u03B9\u03BA\u03BF\u03BD\u03AF\u03B4\u03B9\u03BF \u03C0\u03C1\u03BF\u03CC\u03B4\u03BF\u03C5 (%)
 PropertyAction.dialog=\u03A0\u03C1\u03BF\u03C4\u03B9\u03BC\u03AE\u03C3\u03B5\u03B9\u03C2
 PropertyAction.text=\u03A0\u03C1\u03BF\u03C4\u03B9\u03BC\u03AE\u03C3\u03B5\u03B9\u03C2 ...
 QuickFilterAction.text=\u0393\u03C1\u03AE\u03B3\u03BF\u03C1\u03BF \u03C6\u03AF\u03BB\u03C4\u03C1\u03BF
@@ -1701,6 +1697,7 @@ ToggleLeftToolbarAction.text=\u0395\u03BD\u03B1\u03BB\u03BB\u03B1\u03B3\u03AE \u
 ToggleMenubarAction.text=\u0395\u03BD\u03B1\u03BB\u03BB\u03B1\u03B3\u03AE \u03B3\u03C1\u03B1\u03BC\u03BC\u03AE\u03C2 \u03BC\u03B5\u03BD\u03BF\u03CD
 ToggleStatusAction.text=\u0395\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7 \u03B3\u03C1\u03B1\u03BC\u03BC\u03AE\u03C2 \u03BA\u03B1\u03C4\u03AC\u03C3\u03C4\u03B1\u03C3\u03B7\u03C2
 ToggleToolbarAction.text=\u0395\u03BD\u03B1\u03BB\u03BB\u03B1\u03B3\u03AE \u03B3\u03C1\u03B1\u03BC\u03BC\u03AE\u03C2 \u03B5\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03C9\u03BD
+toolbars=\u039C\u03C0\u03AC\u03C1\u03B5\u03C2 \u03B5\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03C9\u03BD
 undefined_error=\u03A3\u03C5\u03BD\u03AD\u03B2\u03B7 \u03AD\u03BD\u03B1 \u03B1\u03BD\u03B1\u03C0\u03AC\u03BD\u03C4\u03B5\u03C7\u03BF \u03BB\u03AC\u03B8\u03BF\u03C2! \u03A0\u03B1\u03C1\u03B1\u03BA\u03B1\u03BB\u03BF\u03CD\u03BC\u03B5 \u03C0\u03C1\u03BF\u03C3\u03C0\u03B1\u03B8\u03AE\u03C3\u03C4\u03B5 \u03BD\u03B1 \u03BA\u03AC\u03BD\u03B5\u03C4\u03B5 \u03BC\u03AF\u03B1 \u03B1\u03BD\u03B1\u03C6\u03BF\u03C1\u03AC \u03C3\u03C6\u03AC\u03BB\u03BC\u03B1\u03C4\u03BF\u03C2.
 underline=\u03A5\u03C0\u03BF\u03B3\u03C1\u03AC\u03BC\u03BC\u03B9\u03C3\u03B7
 UnderlineAction.text=\u03A5\u03C0\u03BF\u03B3\u03C1\u03AC\u03BC\u03BC\u03B9\u03C3\u03B7
@@ -1729,6 +1726,7 @@ user_template_dir=\u03A0\u03C1\u03CC\u03C4\u03C5\u03C0\u03B1 \u03A7\u03C1\u03B7\
 user_zoom=\u039A\u03BB\u03AF\u03BC\u03B1\u03BA\u03B1 \u03B5\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7\u03C2 (0.0 - 2.0):
 value_format=\u039C\u03BF\u03C1\u03C6\u03AE \u03A4\u03B9\u03BC\u03CE\u03BD
 version_up_to_date=\u0389\u03B4\u03B7 \u03C7\u03C1\u03B7\u03C3\u03B9\u03BC\u03BF\u03C0\u03BF\u03B9\u03B5\u03AF\u03C4\u03B5 \u03C4\u03B7\u03BD \u03C4\u03B5\u03BB\u03B5\u03C5\u03C4\u03B1\u03AF\u03B1 \u03AD\u03BA\u03B4\u03BF\u03C3\u03B7
+view=\u03A0\u03C1\u03BF\u03B2\u03BF\u03BB\u03AE
 ViewerControllerAction.text=\u0395\u03BE\u03C9\u03C4\u03B5\u03C1\u03B9\u03BA\u03CC \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF...
 ViewLayoutTypeAction.OUTLINE.text=\u03A0\u03B5\u03C1\u03B9\u03B3\u03C1\u03B1\u03BC\u03BC\u03B1\u03C4\u03B9\u03BA\u03AE \u038C\u03C8\u03B7
 WebDocuAction.text=\u03A4\u03B5\u03BA\u03BC\u03B7\u03C1\u03AF\u03C9\u03C3\u03B7 \u03C3\u03B5 \u0399\u03C3\u03C4\u03CC
