--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -368,7 +368,7 @@ ExternalImageChangeAction.text=Modifier l'image...
 ExternalImageRemoveAction.text=Supprimer l'image
 ExtractLinkFromTextAction.text=Cr\u00E9er un lien hypertexte \u00E0 partir du n\u0153ud
 ExtractLinkFromTextAction.tooltip=Cr\u00E9er un lien hypertexte \u00E0 partir du texte pr\u00E9sent dans le n\u0153ud
-extras=Extras
+extras=&Outils
 f_button_unassigned=<aucune action>
 FaqOpenURLAction.text=Foire aux questions (FAQ)
 file=&Fichier
@@ -399,7 +399,7 @@ FileRevisionsDialog.question=Modifications trouv\u00E9es pour {0}
 FileRevisionsDialog.restore=R\u00E9tablir
 FileRevisionsDialog.restore.tooltip=Remplacer {0} par {1}
 FileRevisionsDialog.title=R\u00E9visions du fichier
-filter=Filtre
+filter=F&iltres
 filter_add=Ajouter
 filter_and=Et
 filter_any_text=Toutes les zones de texte
@@ -472,7 +472,7 @@ FollowLinkAction.text=Suivre le lien
 font=Police
 FontFamilyAction.text=Famille de police
 FontSizeAction.text=Taille de police
-format=Mise en forme
+format=&Mise en forme
 format_invalid_pattern=Le format d\u00E9finit n'est pas valide.
 format_menu_cloud_shapes=Type de nuage
 format_menu_edge_styles=Style de ligne
@@ -668,7 +668,7 @@ IconSelectionPlugin.text=Ajouter une ic\u00F4ne...
 IconSelectionPlugin.tooltip=Ajoute une ic\u00F4ne gr\u00E2ce \u00E0 la biblioth\u00E8que d'ic\u00F4nes
 image_covertLink=Convertir le lien en image
 ImageFlavorHandler=Image (utilise un fichier s\u00E9par\u00E9)
-import=Importer
+import=I&mporter
 import_linked_branch_no_link=Le n\u0153ud s\u00E9lectionn\u00E9 n'a pas de lien exploitable comme source d'import.
 ImportAction.text=Importer
 ImportBranchAction.text=Une carte...
@@ -706,7 +706,7 @@ license_text=<html>Le pr\u00E9sent programme est un logiciel libre\u00A0; vous p
 link_error=Le lien "{0}" est incorrect, il n''a pas \u00E9t\u00E9 charg\u00E9
 link_not_available_any_more=Ce lien n'est plus valide. Le n\u0153ud a \u00E9t\u00E9 supprim\u00E9 dans l'intervalle.
 link_not_found=Lien {0} non trouv\u00E9.
-links=Liens
+links=Lien
 load=Ouvrir...
 load_accelerator_presets=Ouvrir
 LoadAcceleratorPresetsAction.textPatterns.text=Touches de fonction par d\u00E9faut
@@ -780,10 +780,6 @@ menu_displayAttributes=Attributs
 menu_encryption=Protection
 menu_error=Erreur dans la structure de menu personnalis\u00E9e {0} :\n{1}\nAnnulation
 menu_extensions=N\u0153ud avanc\u00E9
-menu_extras=&Outils
-menu_file_import=Importer
-menu_filter=F&iltres
-menu_format=&Mise en forme
 menu_group=Regroupement de n\u0153uds
 menu_hoverView=Info bulles sur les n\u0153uds
 menu_iconByCategory=Ic\u00F4nes par cat\u00E9gories
@@ -791,26 +787,20 @@ menu_iconView=Ic\u00F4nes
 menu_image=Image
 menu_insert=Ins\u00E9rer
 menu_latex_formula=Formule LaTex
-menu_links=Lien
 menu_manageStyles=Styles
 menu_moveNode=D\u00E9placement
-menu_navigate=&Navigation
 menu_newNode=Nouveau n\u0153ud
 menu_node=N\u0153ud
 menu_node_features=N\u0153ud avanc\u00E9
 menu_nodes=N\u0153ud
 menu_nodeView=N\u0153ud
-menu_notes=Notes
 menu_noteView=Notes
 menu_openmaps=Cartes
-menu_progress=Avancement
 menu_remove_icons=Supprimer les ic\u00F4nes
 menu_removeAttribute=Supprimer les attributs
 menu_select=S\u00E9lection
 menu_time=Calendrier
 menu_title=N\u0153ud
-menu_toolbars=Barres d'outils
-menu_view=&Affichage
 menu_viewmode=Param\u00E8tres d'affichage
 MenuUtils.invalid_menuitem={0} n''est pas valide.
 mindmap=Carte
@@ -833,7 +823,7 @@ most_recent_files=Fichiers r\u00E9cents
 MoveAction.text=D\u00E9placer
 MoveToRootAction.text=Aller \u00E0 la racine
 NameConditionAction.text=Nommer le filtre...
-navigate=Naviguer
+navigate=&Navigation
 NavigationNextMapAction.text=Carte suivante
 NavigationPreviousMapAction.text=Carte pr\u00E9c\u00E9dente
 new=Nouveau...
@@ -910,7 +900,7 @@ normal=Normal
 not_saved_for_image_error=Vous devez enregistrer la carte avant d'ajouter une image
 not_saved_for_link_error=La carte doit avoir \u00E9t\u00E9 enregistr\u00E9e avant de pouvoir d\u00E9finir un lien vers un fichier.
 note_window_location=Position de l'\u00E9diteur de notes
-notes=Notes
+notes=Note
 ok=Valider
 OKAction.text=Valider
 OnlineReference.text=Documentation en ligne
@@ -1199,6 +1189,7 @@ OptionPanel.ROUND_RECT=Rectangle arrondi
 OptionPanel.ru=Russe
 OptionPanel.save_folding=Enregistrer l'\u00E9tat du pliage
 OptionPanel.save_folding_if_map_is_changed=Si la carte est modifi\u00E9e
+OptionPanel.save_last_visited_node=M\u00E9moriser la derni\u00E8re position dans la carte
 OptionPanel.save_modification_times=Enregistrer les heures de modification
 OptionPanel.script_classpath=Classpath pour les Scripts : Dossiers contenant les classes ou les fichiers JAR (sous Windows s\u00E9parateur ;)
 OptionPanel.script_classpath.tooltip=<html>S\u00E9parateur ; (pour Windows) ou : (pour Linux et Mac).<br>Les chemins sont soit absolus, soit relatifs au dossier utilisateur Freeplane.<br>V\u00E9rifiez l'acc\u00E8s en lecture \u00E0 ces dossiers.
@@ -1273,6 +1264,7 @@ OptionPanel.separator.selection_method=M\u00E9thode de s\u00E9lection
 OptionPanel.separator.single_instance_mode=Gestion des instances d'ex\u00E9cution du programme
 OptionPanel.separator.size_limits=Tailles maximales
 OptionPanel.separator.spelling=Correcteur orthographique
+OptionPanel.separator.SplitToWordsAction=Diviser le n\u0153ud par mot
 OptionPanel.separator.status=Barre d'\u00E9tat
 OptionPanel.separator.tooltip=Info-bulles
 OptionPanel.separator.undo=Annulation
@@ -1310,6 +1302,8 @@ OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant pa
 OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorer les mots contenant des nombres
 OptionPanel.spelling_opt_suggestions_limit_dialog=Nombre de suggestions dans la fen\u00EAtre
 OptionPanel.spelling_opt_suggestions_limit_menu=Nombre de suggestions dans le menu
+OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=Laisser le n\u0153ud d'origine vide
+OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=Enregistrer le n\u0153ud d'origine comme d\u00E9tail
 OptionPanel.sr=Serbe /  \u0441\u0440\u043F\u0441\u043A\u0438
 OptionPanel.standard_template=Mod\u00E8le de carte par d\u00E9faut (choisissez une valeur ou entrez le chemin)
 OptionPanel.standardbackgroundcolor=Couleur de fond
@@ -1463,7 +1457,7 @@ PrintAction.text=Imprimer...
 PrintDirectAction.text=Imprimer
 printing_settings=Mise en page de l'impression
 PrintPreviewAction.text=Aper\u00E7u avant impression...
-progress=En cours
+progress=Avancement
 PropertyAction.dialog=Pr\u00E9f\u00E9rences utilisateur
 PropertyAction.text=Pr\u00E9f\u00E9rences...
 QuickFilterAction.text=Afficher uniquement les r\u00E9sultats
@@ -1865,7 +1859,7 @@ user_zoom=Zoom pour l'impression (0.0 - 2.0) :
 userScripts=Scripts
 value_format=Format de la valeur
 version_up_to_date=Vous utilisez la derni\u00E8re version de Freeplane.
-view=Affichage
+view=&Affichage
 ViewerControllerAction.text=Objet...
 ViewLayoutTypeAction.OUTLINE.text=Vue plan
 web_resources=Ressources web
