--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -244,6 +244,7 @@ CutAction.text=Izre\u017Ei
 decrease_branch_font_size=Manja slova
 DecreaseNodeFontAction.text=Manja slova
 default=Zadano
+defaultAuxillaryWordList=a, the, of
 DefaultColorAction.text=Zadana boja
 defaultstyle.attributes=Obilje\u017Eja
 defaultstyle.details=Detalji
@@ -369,7 +370,7 @@ ExternalImageChangeAction.text=Promijeni vanjsku sliku...
 ExternalImageRemoveAction.text=Obri\u0161i sliku
 ExtractLinkFromTextAction.text=Hiperlink iz teksta
 ExtractLinkFromTextAction.tooltip=Postavi hiperlink na\u0111en u tekstu \u010Dvora
-extras=Dodaci
+extras=&Alati
 f_button_unassigned=nema akcije
 FaqOpenURLAction.text=\u010Cesto postavljena pitanja
 file=&Datoteka
@@ -400,7 +401,7 @@ FileRevisionsDialog.question=Prona\u0111ene su obnovljene dataoteke od {0}
 FileRevisionsDialog.restore=Obn&ovi
 FileRevisionsDialog.restore.tooltip=Zamijeni {0} sa {1}
 FileRevisionsDialog.title=Obnovljena datoteka
-filter=Filtar
+filter=F&iltar
 filter_add=&Dodaj
 filter_and=&I
 filter_any_text=Jezgra \u010Dvora, detalji ili bilje\u0161ke
@@ -476,7 +477,7 @@ FollowLinkAction.text=Otvori hipervezu (link)
 font=Slova
 FontFamilyAction.text=Oblik slova
 FontSizeAction.text=Veli\u010Dina slova
-format=Oblik
+format=O&blikovanje
 format_invalid_pattern=Uzorak nije valjan
 format_menu_cloud_shapes=Oblik obla\u010Di\u0107a
 format_menu_edge_styles=Stil &ruba
@@ -672,7 +673,7 @@ IconSelectionPlugin.text=Odaberi ikonu...
 IconSelectionPlugin.tooltip=<html>Ovdje mo\u017Eete odabrati ikonu s upotrebom dijaloga.</html>
 image_covertLink=Pretvori vezu u sliku
 ImageFlavorHandler=Slika (koristi zasebnu datoteku)
-import=Uvoz
+import=U&voz
 import_linked_branch_no_link=Odabrani \u010Dvor nema nikakvu vezu za uvoz.
 ImportAction.text=U&voz
 ImportBranchAction.text=Grane...
@@ -712,7 +713,7 @@ license_text=<html>Ovaj program je besplatan; mo\u017Eete ga dijeliti i/ili<br>m
 link_error=Neispravna veza "{0}" nije u\u010Ditana
 link_not_available_any_more=Veza nije valjana. U me\u0111uvremenu je \u010Dvor obrisan.
 link_not_found=Veza {0} nije na\u0111ena.
-links=Linkovi
+links=Veze
 load=&U\u010Ditaj
 load_accelerator_presets=U\u010Ditaj
 LoadAcceleratorPresetsAction.textPatterns.text=Tekst
@@ -722,6 +723,7 @@ locking_old_lock_removed=Mapa {0} je zaklju\u010Dana kod korisnika {1}. Zaklju\u
 long_node_changed_cancel=Promijenili ste \u010Dvor. \u017Delite li odbaciti promjene?
 long_node_changed_submit=Promijenili ste \u010Dvor. \u017Delite li spremiti promjene?
 lots_of_links_warning=Napravit \u0107ete previ\u0161e veza na istom \u010Dvor. Zaista \u017Eelite kreirati toliko veza?
+main_menu=Izbornik
 main_resource_directory=Mjesto instalacije programa: {0}
 MainView.errorUpdateText=Pogre\u0161ka u postavljanu teksta za slijede\u0107i unos: {0}.
 MakeLinkFromAnchorAction.text=Izradi vezu od sidra
@@ -785,10 +787,6 @@ menu_displayAttributes=Obilje\u017Eja \u010Dvora
 menu_encryption=Za\u0161tita
 menu_error=Gre\u0161ka u korisni\u010Dko definiranoj strukturi izbornika {0}:\n{1}\nZaustavljn proces
 menu_extensions=Pro\u0161irenja \u010Dvora
-menu_extras=&Alati
-menu_file_import=U&voz
-menu_filter=F&iltar
-menu_format=O&blikovanje
 menu_group=\u010Cvor sa\u017Eetak
 menu_hoverView=Prikaz opisa
 menu_iconByCategory=Kategorije ikona...
@@ -796,26 +794,20 @@ menu_iconView=Ikone
 menu_image=Slike
 menu_insert=Um&etanje
 menu_latex_formula=LaTeX formula
-menu_links=Veze
 menu_manageStyles=Upravljanje stilovima
 menu_moveNode=Pomak i sortiranje
-menu_navigate=&Navigacija
 menu_newNode=Novi \u010Dvor
 menu_node=\u010Cvor
 menu_node_features=Dodaci \u010Dvora
 menu_nodes=&\u010Cvor
 menu_nodeView=\u010Cvor
-menu_notes=Bilje\u0161ka
 menu_noteView=Bilje\u0161ke
 menu_openmaps=Mape
-menu_progress=Napredak
 menu_remove_icons=Ukloni ikone
 menu_removeAttribute=Ukloni obilje\u017Eje
 menu_select=Odaberi
 menu_time=Upravljanje vremenom
 menu_title=\u010Cvor
-menu_toolbars=Alatne trake
-menu_view=P&ogled
 menu_viewmode=Postavke pogleda
 MenuUtils.invalid_menuitem={0} nije ispravna tipkovni\u010Dka kratica naredbe izbornika.
 mindmap=Mapa
@@ -838,7 +830,7 @@ most_recent_files=Ne&davno otvarane datoteke
 MoveAction.text=Pomakni
 MoveToRootAction.text=Povratak na korijenski \u010Dvor
 NameConditionAction.text=Postavi naziv
-navigate=Upravljati
+navigate=&Navigacija
 NavigationNextMapAction.text=Sljede\u0107a mapa
 NavigationPreviousMapAction.text=Prethodna mapa
 new=&Novi
@@ -915,7 +907,7 @@ normal=Uobi\u010Dajen
 not_saved_for_image_error=Mapa mora biti pohranjena prije postavljanja slike
 not_saved_for_link_error=Mapa mora biti spremljena prije povezivanja datoteke preko pretra\u017Eiva\u010Da datoteka
 note_window_location=Pozicija prozora bilje\u0161ki
-notes=Bilje\u0161ke
+notes=Bilje\u0161ka
 ok=&U redu
 OKAction.text=&Uredu
 OnlineReference.text=Dokumentacija - WEB
@@ -1281,6 +1273,7 @@ OptionPanel.separator.selection_method=Na\u010Din odabira
 OptionPanel.separator.single_instance_mode=Otvaranje programa
 OptionPanel.separator.size_limits=Ograni\u010Denja veli\u010Dina
 OptionPanel.separator.spelling=Opcije provjere pravopisa
+OptionPanel.separator.SplitToWordsAction=Razdvajanje \u010Dvora prema rije\u010Dima
 OptionPanel.separator.status=Statusna traka
 OptionPanel.separator.tooltip=Vrijeme prikaza opisa alata
 OptionPanel.separator.undo=Poni\u0161ti
@@ -1319,6 +1312,10 @@ OptionPanel.spelling_opt_ignore_capitalization=Zanemari VELIKA SLOVA na po\u010D
 OptionPanel.spelling_opt_ignore_words_with_numbers=Zanemari rije\u010Di koje sadr\u017Ee brojeve
 OptionPanel.spelling_opt_suggestions_limit_dialog=Maksimalan broj predlo\u017Eenih rje\u010Di u dijalogu
 OptionPanel.spelling_opt_suggestions_limit_menu=Maksimalan broj predlo\u017Eenih rje\u010Di u izborniku
+OptionPanel.SplitToWordsAction.auxillaryWordList=pomo\u0107ni popis rije\u010Di
+OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=ostavi izvorni \u010Dvor prazan
+OptionPanel.SplitToWordsAction.nodeNumbersInLine=broj \u010Dvora u redu
+OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=spremi orginalni tekst kao detalje
 OptionPanel.sr=Srpski / \u0441\u0440\u043F\u0441\u043A\u0438
 OptionPanel.standard_template=Datoteka  predlo\u0161ka
 OptionPanel.standardbackgroundcolor=Boja pozadine mape
@@ -1777,6 +1774,7 @@ split=&Razdijeli
 SplitConditionAction.text=Razdijeli
 SplitNode.text=&Podijeli \u010Dvor
 SplitNode.tooltip=<html>Dijeli trenutni \u010Dvor na poziciji pokaziva\u010Da mi\u0161a</html>
+SplitToWordsAction.text=Razdvoji sa {0} rije\u010Di u retku
 STANDARD_FORMAT=Standard
 stop_processing=Stop
 StringFlavorHandler=Obi\u010Dan tekst kao hijerarhija \u010Dvorova
@@ -1835,7 +1833,7 @@ ToggleMenubarAction.text=&Izborna traka
 ToggleScrollbarsAction.text=Kliza\u010Di
 ToggleStatusAction.text=Prika\u017Ei statusnu traku
 ToggleToolbarAction.text=&Alatna traka
-toolbars=Alatna traka
+toolbars=Alatne trake
 undefined_error=Do\u0161lo je do neo\u010Dekivane gre\u0161ke. Molim poku\u0161ajte poslati poruku o gre\u0161ci.
 underline=Podcrtano
 UnderlineAction.text=Podcrtano
@@ -1876,7 +1874,7 @@ user_zoom=Faktor pove\u0107anja ispisa (0.0 - 2.0):
 userScripts=Skripte
 value_format=Oblik vrijednost
 version_up_to_date=Trenutno koristite najnoviju verziju programa
-view=Pregled
+view=P&ogled
 ViewerControllerAction.text=Vanjski objekt...
 ViewLayoutTypeAction.OUTLINE.text=Op\u0107i pregled
 web_resources=WEB izvori
