--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -369,7 +369,7 @@ ExternalImageChangeAction.text=Change image...
 ExternalImageRemoveAction.text=Remove image
 ExtractLinkFromTextAction.text=Convert link from within text
 ExtractLinkFromTextAction.tooltip=Set hyper link from address n node text
-extras=Extras
+extras=&Tools
 f_button_unassigned=<no action>
 FaqOpenURLAction.text=FAQ
 file=&File
@@ -400,7 +400,7 @@ FileRevisionsDialog.question=Found revisions of {0}
 FileRevisionsDialog.restore=Rest&ore
 FileRevisionsDialog.restore.tooltip=Replace {0} by {1}
 FileRevisionsDialog.title=File revisions
-filter=Filter
+filter=F&ilter
 filter_add=&Add
 filter_and=A&nd
 filter_any_text=Core, details or note
@@ -476,7 +476,7 @@ FollowLinkAction.text=Follow link
 font=Font
 FontFamilyAction.text=Font family
 FontSizeAction.text=Font size
-format=Format
+format=F&ormat
 format_invalid_pattern=Not a valid pattern
 format_menu_cloud_shapes=Add cloud or change style
 format_menu_edge_styles=&Edge styles
@@ -672,7 +672,7 @@ IconSelectionPlugin.text=Icon from table...
 IconSelectionPlugin.tooltip=<html>Here you can select an icon using a subwindow.</html>
 image_covertLink=Convert link to image
 ImageFlavorHandler=Image (use separate file)
-import=Import
+import=I&mport
 import_linked_branch_no_link=The selected node has no link to import from.
 ImportAction.text=&Import map
 ImportBranchAction.text=&Branch...
@@ -712,7 +712,7 @@ license_text=<html>This program is free software; you can redistribute it and/or
 link_error=Incorrect link "{0}" not loaded
 link_not_available_any_more=The link is not valid anymore. The node was deleted in between.
 link_not_found=Link {0} not found.
-links=Links
+links=Link
 load=&Load
 load_accelerator_presets=Load
 LoadAcceleratorPresetsAction.textPatterns.text=Text Patterns
@@ -786,10 +786,6 @@ menu_displayAttributes=Node attributes
 menu_encryption=Password protection
 menu_error=Error in user defined menu structure {0}:\n{1}\nAborting
 menu_extensions=Node extensions
-menu_extras=&Tools
-menu_file_import=I&mport
-menu_filter=F&ilter
-menu_format=F&ormat
 menu_group=Node group
 menu_hoverView=Tool tips
 menu_iconByCategory=Icon by category...
@@ -797,26 +793,20 @@ menu_iconView=Icons
 menu_image=Image
 menu_insert=In&sert
 menu_latex_formula=LaTeX formula
-menu_links=Link
 menu_manageStyles=&Manage Styles
 menu_moveNode=Move and sort
-menu_navigate=&Navigate
 menu_newNode=New node
 menu_node=Node
 menu_node_features=Node Feat&ures
 menu_nodes=&Nodes
 menu_nodeView=Node core
-menu_notes=Note
 menu_noteView=Notes
 menu_openmaps=Maps
-menu_progress=Progress icon (%)
 menu_remove_icons=Remove icons
 menu_removeAttribute=Remove attribute
 menu_select=Select
 menu_time=Time management
 menu_title=Node core
-menu_toolbars=Toolbars
-menu_view=&View
 menu_viewmode=View settings
 MenuUtils.invalid_menuitem={0} is not a valid menu item key.
 mindmap=Map
@@ -839,7 +829,7 @@ most_recent_files=Most recent maps
 MoveAction.text=Move
 MoveToRootAction.text=Goto root
 NameConditionAction.text=Set name
-navigate=Navigate
+navigate=&Navigate
 NavigationNextMapAction.text=Next map
 NavigationPreviousMapAction.text=Previous map
 new=&New
@@ -914,7 +904,7 @@ normal=Normal
 not_saved_for_image_error=The map must be saved before you can set an image by file chooser
 not_saved_for_link_error=The map must be saved before you can set a link by file chooser
 note_window_location=Note panel position
-notes=Notes
+notes=Note
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Documentation Maps Online
@@ -1204,7 +1194,7 @@ OptionPanel.ROUND_RECT=Round Rectangle
 OptionPanel.ru=Russian / \u0420\u0443\u0441\u0441\u043A\u0438\u0439
 OptionPanel.save_folding=Save folding
 OptionPanel.save_folding_if_map_is_changed=If map is changed
-OptionPanel.save_last_visited_node==Save last position in map
+OptionPanel.save_last_visited_node=Save last position in map
 OptionPanel.save_modification_times=Save modification times
 OptionPanel.script_classpath=Script classpath: Additional directories containing classes and/or JARs (see tooltip)
 OptionPanel.script_classpath.tooltip=<html>A list of JARs and/or directories to add to the classpath of scripts and formulas.<br>Use ; (Windows) or : (Linux, Mac) to separate entries.<br>Directories will be scanned for JARs and for .class files.<br>Paths that are not absolute are considered relative to the Freeplane user directory.<br>If you set the classpath you have to permit read access too!</html>
@@ -1474,7 +1464,7 @@ PrintAction.text=&Print map...
 PrintDirectAction.text=Print
 printing_settings=Print scaling
 PrintPreviewAction.text=Print pre&view...
-progress=Progress
+progress=Progress icon (%)
 PropertyAction.dialog=Preferences
 PropertyAction.text=Preferences ...
 QuickFilterAction.text=Quick filter
@@ -1500,6 +1490,8 @@ ReminderHookAction.text=Remove reminder
 ReminderHookAction.tooltip=Removes a reminder from a node.
 remove_file_from_list_on_error=File {0} not opened. Remove it from the last opened file list?
 remove_shortcut_question=Replace shortcut?
+RemoveAllAlwaysUnfoldedNodeFlagsAction.text=Reset unfolded nodes
+RemoveAllAlwaysUnfoldedNodeFlagsAction.tooltip=Allows folding for every node
 RemoveAllIconsAction.text=Remove all icons
 RemoveConnectorAction.text=Remove Connector
 RemoveEncryption.text=Remove password
@@ -1568,6 +1560,8 @@ set_accelerator_on_next_click_action=To create a new keyboard shortcut: press 'C
 SetAccelerator.dialogTitle=Hot key assignment
 SetAccelerator.keystrokeDetected=Keystroke ''{0}'' is not assigned to any menu item.
 SetAcceleratorOnNextClickAction.text=Assign hot key...
+SetAlwaysUnfoldedNodeFlagsAction.text=Keep unfolded nodes
+SetAlwaysUnfoldedNodeFlagsAction.tooltip=Prevents folding for currently unfolded nodes
 SetImageByFileChooserAction.text=Image by choice or link...
 SetLinkAnchorAction.text=Set link anchor
 SetLinkAnchorAction.tooltip=<html>set selected node as anchor for future<br/>creation of local or global links.
@@ -1911,7 +1905,7 @@ user_zoom=Print zoom factor (0.0 - 2.0):
 userScripts=Scripts
 value_format=Value format
 version_up_to_date=You already use the latest program version
-view=View
+view=&View
 ViewerControllerAction.text=External object...
 ViewLayoutTypeAction.OUTLINE.text=Outline view
 web_resources=Web resources
